v0.1.0/_sources/plc-lfe-gem_plc_lfe_gem_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.88.32.1.1
      -
    * - Target IP address
      - 172.21.88.32
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _plc_lfe_gem_pragmas:

Pragmas
-------

Total pragmas found: 275
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        L2SI Vacuum Library, SLAC, , 0.0.0
        LCLS General, SLAC, Unset, 2.4.1
        LCLS Vacuum, SLAC - LCLS, Unset, 0.0.0
        LCLSVacuumSerialDriverLib, SLAC, , 1.1.4
        PMPS, SLAC - LCLS, Unset, 0.0.0
        SysFile, System, , 3.5.9.0
        Tc2_ControllerToolbox, Beckhoff Automation GmbH, Unset, 3.4.1.4
        Tc2_DataExchange, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.11.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, , 3.3.37.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.2.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.22.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, 3.3.35.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.22.0
        Tc3_Interfaces, Beckhoff Automation GmbH, , 3.4.3.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.6.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.0.1.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4387008 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 24634488 (8)
        Constants.bLittleEndian, BOOL, 24634344 (8)
        Constants.bSimulationMode, BOOL, 24634480 (8)
        Constants.CompilerVersion, VERSION, 24634416 (64)
        Constants.CompilerVersionNumeric, DWORD, 24634560 (32)
        Constants.gc_GaugeValidState, INT, 8539488 (16)
        Constants.gc_GaugeValidState, INT, 8537856 (16)
        Constants.gc_iSizeOfGGOArray, INT, 8539472 (16)
        Constants.gc_iSizeOfGGOArray, INT, 4392688 (16)
        Constants.nPackMode, UINT, 24634512 (16)
        Constants.nRegisterSize, WORD, 24634496 (16)
        Constants.RuntimeVersion, VERSION, 24634352 (64)
        Constants.RuntimeVersionNumeric, DWORD, 24634528 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4389248 (32)


GVL_Control
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Control.fGEM1SetpointValue, REAL, 14525568 (32)
        GVL_Control.fGEM2SetpointValue, REAL, 14525600 (32)
        GVL_Control.GEM1_GO, BOOL, 14524816 (8)
        GVL_Control.GEM2_GO, BOOL, 14524824 (8)


GVL_Devices
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>403 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Devices.DSG_PIN, FB_TPIP_ADS, 14616320 (90688)
        GVL_Devices.DSV_VGC, FB_Valve_Interface, 14707008 (2368)
        GVL_Devices.DSV_VGC.i_xClsLS, BOOL, 14709352 (8)
        GVL_Devices.DSV_VGC.i_xOpnLS, BOOL, 14709344 (8)
        GVL_Devices.GATT_GMP_10, FB_GCM, 17889920 (1248)
        GVL_Devices.GATT_GMP_10.i_iPRESS_R, INT, 17891152 (16)
        GVL_Devices.GATT_GMP_11, FB_CMR362, 17888704 (1216)
        GVL_Devices.GATT_GMP_11.i_iPRESS_R, INT, 17889904 (16)
        GVL_Devices.GATT_GPI_10, FB_MKS317A, 17804800 (83904)
        GVL_Devices.GATT_GPI_10.i_iPRESS_R, INT, 17888640 (16)
        GVL_Devices.GATT_VCN_10, FB_VCN, 17891168 (480)
        GVL_Devices.GATT_VCN_10.q_iRawPosition, INT, 17891616 (16)
        GVL_Devices.GATT_VRC_10, FB_VRC, 17891648 (84544)
        GVL_Devices.GATT_VRC_10.i_xClsLS, BOOL, 17976168 (8)
        GVL_Devices.GATT_VRC_10.i_xOpnLS, BOOL, 17976160 (8)
        GVL_Devices.GATT_VRC_10.q_xOPN_DO, BOOL, 17976176 (8)
        GVL_Devices.GATT_VVC_10, FB_VVC, 17976192 (640)
        GVL_Devices.GATT_VVC_10.q_xOPN_DO, BOOL, 17976800 (8)
        GVL_Devices.GEM1_GCC_10, FB_MKS422, 14709440 (85056)
        GVL_Devices.GEM1_GCC_10.i_iPRESS_R, INT, 14794400 (16)
        GVL_Devices.GEM1_GCC_10.q_xHV_DIS, BOOL, 14794416 (8)
        GVL_Devices.GEM1_GCC_20, FB_MKS422, 14878400 (85056)
        GVL_Devices.GEM1_GCC_20.i_iPRESS_R, INT, 14963360 (16)
        GVL_Devices.GEM1_GCC_20.q_xHV_DIS, BOOL, 14963376 (8)
        GVL_Devices.GEM1_GCC_30, FB_MKS422, 15047360 (85056)
        GVL_Devices.GEM1_GCC_30.i_iPRESS_R, INT, 15132320 (16)
        GVL_Devices.GEM1_GCC_30.q_xHV_DIS, BOOL, 15132336 (8)
        GVL_Devices.GEM1_GCC_50, FB_MKS422, 15216320 (85056)
        GVL_Devices.GEM1_GCC_50.i_iPRESS_R, INT, 15301280 (16)
        GVL_Devices.GEM1_GCC_50.q_xHV_DIS, BOOL, 15301296 (8)
        GVL_Devices.GEM1_GCM_40, ST_VG, 15891200 (1056)
        GVL_Devices.GEM1_GCM_41, FB_GCM, 15888704 (1248)
        GVL_Devices.GEM1_GCM_41.i_iPRESS_R, INT, 15889936 (16)
        GVL_Devices.GEM1_GCM_42, FB_GCM, 15889952 (1248)
        GVL_Devices.GEM1_GCM_42.i_iPRESS_R, INT, 15891184 (16)
        GVL_Devices.GEM1_GPI_10, FB_MKS317A, 14794496 (83904)
        GVL_Devices.GEM1_GPI_10.i_iPRESS_R, INT, 14878336 (16)
        GVL_Devices.GEM1_GPI_11, FB_MKS275, 15385280 (83904)
        GVL_Devices.GEM1_GPI_11.i_iPRESS_R, INT, 15468992 (16)
        GVL_Devices.GEM1_GPI_20, FB_MKS317A, 14963456 (83904)
        GVL_Devices.GEM1_GPI_20.i_iPRESS_R, INT, 15047296 (16)
        GVL_Devices.GEM1_GPI_30, FB_MKS317A, 15132416 (83904)
        GVL_Devices.GEM1_GPI_30.i_iPRESS_R, INT, 15216256 (16)
        GVL_Devices.GEM1_GPI_31, FB_MKS275, 15469184 (83904)
        GVL_Devices.GEM1_GPI_31.i_iPRESS_R, INT, 15552896 (16)
        GVL_Devices.GEM1_GPI_50, FB_MKS317A, 15301376 (83904)
        GVL_Devices.GEM1_GPI_50.i_iPRESS_R, INT, 15385216 (16)
        GVL_Devices.GEM1_GPI_51, FB_MKS275, 15553088 (83904)
        GVL_Devices.GEM1_GPI_51.i_iPRESS_R, INT, 15636800 (16)
        GVL_Devices.GEM1_GPI_60, FB_MKS317A, 15636992 (83904)
        GVL_Devices.GEM1_GPI_60.i_iPRESS_R, INT, 15720832 (16)
        GVL_Devices.GEM1_GPI_61, FB_MKS275, 15720896 (83904)
        GVL_Devices.GEM1_GPI_61.i_iPRESS_R, INT, 15804608 (16)
        GVL_Devices.GEM1_GPI_71, FB_MKS275, 15804800 (83904)
        GVL_Devices.GEM1_GPI_71.i_iPRESS_R, INT, 15888512 (16)
        GVL_Devices.GEM1_PRO_20, FB_ScrollPump, 17803456 (448)
        GVL_Devices.GEM1_PRO_20.q_xRunDo, BOOL, 17803872 (8)
        GVL_Devices.GEM1_PRO_30, FB_ScrollPump, 17803904 (448)
        GVL_Devices.GEM1_PRO_30.q_xRunDo, BOOL, 17804320 (8)
        GVL_Devices.GEM1_PRO_50, FB_ScrollPump, 17804352 (448)
        GVL_Devices.GEM1_PRO_50.q_xRunDo, BOOL, 17804768 (8)
        GVL_Devices.GEM1_PRO_60, FB_KashiyamaPump, 17451776 (832)
        GVL_Devices.GEM1_PRO_60.i_xAlarm, BOOL, 17452576 (8)
        GVL_Devices.GEM1_PRO_60.i_xIsRun, BOOL, 17452592 (8)
        GVL_Devices.GEM1_PRO_60.i_xLocal, BOOL, 17452568 (8)
        GVL_Devices.GEM1_PRO_60.i_xWarning, BOOL, 17452584 (8)
        GVL_Devices.GEM1_PRO_60.q_xLspdDo, BOOL, 17452560 (8)
        GVL_Devices.GEM1_PRO_60.q_xResetDo, BOOL, 17452552 (8)
        GVL_Devices.GEM1_PRO_60.q_xRunDO, BOOL, 17452544 (8)
        GVL_Devices.GEM1_PRO_70, FB_KashiyamaPump, 17452608 (832)
        GVL_Devices.GEM1_PRO_70.i_xAlarm, BOOL, 17453408 (8)
        GVL_Devices.GEM1_PRO_70.i_xIsRun, BOOL, 17453424 (8)
        GVL_Devices.GEM1_PRO_70.i_xLocal, BOOL, 17453400 (8)
        GVL_Devices.GEM1_PRO_70.i_xWarning, BOOL, 17453416 (8)
        GVL_Devices.GEM1_PRO_70.q_xLspdDo, BOOL, 17453392 (8)
        GVL_Devices.GEM1_PRO_70.q_xResetDo, BOOL, 17453384 (8)
        GVL_Devices.GEM1_PRO_70.q_xRunDO, BOOL, 17453376 (8)
        GVL_Devices.GEM1_PTM_10, FB_PTM_Agilent, 17453440 (86400)
        GVL_Devices.GEM1_PTM_10.i_iCurrentMon, INT, 17539680 (16)
        GVL_Devices.GEM1_PTM_10.i_iPowerMon, INT, 17539664 (16)
        GVL_Devices.GEM1_PTM_10.i_iRawSpeed, INT, 17539696 (16)
        GVL_Devices.GEM1_PTM_10.i_iTempMon, INT, 17539648 (16)
        GVL_Devices.GEM1_PTM_10.i_xFault, BOOL, 17539712 (8)
        GVL_Devices.GEM1_PTM_10.i_xLSpd, BOOL, 17539640 (8)
        GVL_Devices.GEM1_PTM_10.i_xR1, BOOL, 17539624 (8)
        GVL_Devices.GEM1_PTM_10.i_xR2, BOOL, 17539632 (8)
        GVL_Devices.GEM1_PTM_10.i_xSTART, BOOL, 17539616 (8)
        GVL_Devices.GEM1_PTM_10.q_RunDO, BOOL, 17539720 (8)
        GVL_Devices.GEM1_PTM_10.q_xLSpd, BOOL, 17539728 (8)
        GVL_Devices.GEM1_PTM_20, FB_PTM_Agilent, 17539840 (86400)
        GVL_Devices.GEM1_PTM_20.i_iCurrentMon, INT, 17626080 (16)
        GVL_Devices.GEM1_PTM_20.i_iPowerMon, INT, 17626064 (16)
        GVL_Devices.GEM1_PTM_20.i_iRawSpeed, INT, 17626096 (16)
        GVL_Devices.GEM1_PTM_20.i_iTempMon, INT, 17626048 (16)
        GVL_Devices.GEM1_PTM_20.i_xFault, BOOL, 17626112 (8)
        GVL_Devices.GEM1_PTM_20.i_xLSpd, BOOL, 17626040 (8)
        GVL_Devices.GEM1_PTM_20.i_xR1, BOOL, 17626024 (8)
        GVL_Devices.GEM1_PTM_20.i_xR2, BOOL, 17626032 (8)
        GVL_Devices.GEM1_PTM_20.i_xSTART, BOOL, 17626016 (8)
        GVL_Devices.GEM1_PTM_20.q_RunDO, BOOL, 17626120 (8)
        GVL_Devices.GEM1_PTM_20.q_xLSpd, BOOL, 17626128 (8)
        GVL_Devices.GEM1_PTM_30, FB_PTM_Agilent, 17626240 (86400)
        GVL_Devices.GEM1_PTM_30.i_iCurrentMon, INT, 17712480 (16)
        GVL_Devices.GEM1_PTM_30.i_iPowerMon, INT, 17712464 (16)
        GVL_Devices.GEM1_PTM_30.i_iRawSpeed, INT, 17712496 (16)
        GVL_Devices.GEM1_PTM_30.i_iTempMon, INT, 17712448 (16)
        GVL_Devices.GEM1_PTM_30.i_xFault, BOOL, 17712512 (8)
        GVL_Devices.GEM1_PTM_30.i_xLSpd, BOOL, 17712440 (8)
        GVL_Devices.GEM1_PTM_30.i_xR1, BOOL, 17712424 (8)
        GVL_Devices.GEM1_PTM_30.i_xR2, BOOL, 17712432 (8)
        GVL_Devices.GEM1_PTM_30.i_xSTART, BOOL, 17712416 (8)
        GVL_Devices.GEM1_PTM_30.q_RunDO, BOOL, 17712520 (8)
        GVL_Devices.GEM1_PTM_30.q_xLSpd, BOOL, 17712528 (8)
        GVL_Devices.GEM1_PTM_50, FB_PTM_Agilent, 17712640 (86400)
        GVL_Devices.GEM1_PTM_50.i_iCurrentMon, INT, 17798880 (16)
        GVL_Devices.GEM1_PTM_50.i_iPowerMon, INT, 17798864 (16)
        GVL_Devices.GEM1_PTM_50.i_iRawSpeed, INT, 17798896 (16)
        GVL_Devices.GEM1_PTM_50.i_iTempMon, INT, 17798848 (16)
        GVL_Devices.GEM1_PTM_50.i_xFault, BOOL, 17798912 (8)
        GVL_Devices.GEM1_PTM_50.i_xLSpd, BOOL, 17798840 (8)
        GVL_Devices.GEM1_PTM_50.i_xR1, BOOL, 17798824 (8)
        GVL_Devices.GEM1_PTM_50.i_xR2, BOOL, 17798832 (8)
        GVL_Devices.GEM1_PTM_50.i_xSTART, BOOL, 17798816 (8)
        GVL_Devices.GEM1_PTM_50.q_RunDO, BOOL, 17798920 (8)
        GVL_Devices.GEM1_PTM_50.q_xLSpd, BOOL, 17798928 (8)
        GVL_Devices.GEM1_VCN_40, FB_VCN, 15892896 (480)
        GVL_Devices.GEM1_VCN_40.q_iRawPosition, INT, 15893344 (16)
        GVL_Devices.GEM1_VGC_10, FB_VGC, 15893376 (173440)
        GVL_Devices.GEM1_VGC_10.i_xClsLS, BOOL, 16066728 (8)
        GVL_Devices.GEM1_VGC_10.i_xOpnLS, BOOL, 16066720 (8)
        GVL_Devices.GEM1_VGC_10.q_xOPN_DO, BOOL, 16066736 (8)
        GVL_Devices.GEM1_VGC_20, FB_VGC, 16066816 (173440)
        GVL_Devices.GEM1_VGC_20.i_xClsLS, BOOL, 16240168 (8)
        GVL_Devices.GEM1_VGC_20.i_xOpnLS, BOOL, 16240160 (8)
        GVL_Devices.GEM1_VGC_20.q_xOPN_DO, BOOL, 16240176 (8)
        GVL_Devices.GEM1_VGC_30, FB_VGC, 16240256 (173440)
        GVL_Devices.GEM1_VGC_30.i_xClsLS, BOOL, 16413608 (8)
        GVL_Devices.GEM1_VGC_30.i_xOpnLS, BOOL, 16413600 (8)
        GVL_Devices.GEM1_VGC_30.q_xOPN_DO, BOOL, 16413616 (8)
        GVL_Devices.GEM1_VGC_40, FB_VGC, 16413696 (173440)
        GVL_Devices.GEM1_VGC_40.i_xClsLS, BOOL, 16587048 (8)
        GVL_Devices.GEM1_VGC_40.i_xOpnLS, BOOL, 16587040 (8)
        GVL_Devices.GEM1_VGC_40.q_xOPN_DO, BOOL, 16587056 (8)
        GVL_Devices.GEM1_VGC_50, FB_VGC, 16587136 (173440)
        GVL_Devices.GEM1_VGC_50.i_xClsLS, BOOL, 16760488 (8)
        GVL_Devices.GEM1_VGC_50.i_xOpnLS, BOOL, 16760480 (8)
        GVL_Devices.GEM1_VGC_50.q_xOPN_DO, BOOL, 16760496 (8)
        GVL_Devices.GEM1_VGC_60, FB_VGC, 16760576 (173440)
        GVL_Devices.GEM1_VGC_60.i_xClsLS, BOOL, 16933928 (8)
        GVL_Devices.GEM1_VGC_60.i_xOpnLS, BOOL, 16933920 (8)
        GVL_Devices.GEM1_VGC_60.q_xOPN_DO, BOOL, 16933936 (8)
        GVL_Devices.GEM1_VGC_70, FB_VGC, 16934016 (173440)
        GVL_Devices.GEM1_VGC_70.i_xClsLS, BOOL, 17107368 (8)
        GVL_Devices.GEM1_VGC_70.i_xOpnLS, BOOL, 17107360 (8)
        GVL_Devices.GEM1_VGC_70.q_xOPN_DO, BOOL, 17107376 (8)
        GVL_Devices.GEM1_VRC_10, FB_VRC, 17107456 (84544)
        GVL_Devices.GEM1_VRC_10.i_xClsLS, BOOL, 17191976 (8)
        GVL_Devices.GEM1_VRC_10.i_xOpnLS, BOOL, 17191968 (8)
        GVL_Devices.GEM1_VRC_10.q_xOPN_DO, BOOL, 17191984 (8)
        GVL_Devices.GEM1_VRC_20, FB_VRC, 17192000 (84544)
        GVL_Devices.GEM1_VRC_20.i_xClsLS, BOOL, 17276520 (8)
        GVL_Devices.GEM1_VRC_20.i_xOpnLS, BOOL, 17276512 (8)
        GVL_Devices.GEM1_VRC_20.q_xOPN_DO, BOOL, 17276528 (8)
        GVL_Devices.GEM1_VRC_30, FB_VRC, 17276544 (84544)
        GVL_Devices.GEM1_VRC_30.i_xClsLS, BOOL, 17361064 (8)
        GVL_Devices.GEM1_VRC_30.i_xOpnLS, BOOL, 17361056 (8)
        GVL_Devices.GEM1_VRC_30.q_xOPN_DO, BOOL, 17361072 (8)
        GVL_Devices.GEM1_VRC_50, FB_VRC, 17361088 (84544)
        GVL_Devices.GEM1_VRC_50.i_xClsLS, BOOL, 17445608 (8)
        GVL_Devices.GEM1_VRC_50.i_xOpnLS, BOOL, 17445600 (8)
        GVL_Devices.GEM1_VRC_50.q_xOPN_DO, BOOL, 17445616 (8)
        GVL_Devices.GEM1_VRC_60, FB_Kashiyama_VRC, 17445632 (3072)
        GVL_Devices.GEM1_VRC_60.i_xClsLS, BOOL, 17448680 (8)
        GVL_Devices.GEM1_VRC_60.i_xOpnLS, BOOL, 17448672 (8)
        GVL_Devices.GEM1_VRC_60.q_xOPN_DO, BOOL, 17448688 (8)
        GVL_Devices.GEM1_VRC_70, FB_Kashiyama_VRC, 17448704 (3072)
        GVL_Devices.GEM1_VRC_70.i_xClsLS, BOOL, 17451752 (8)
        GVL_Devices.GEM1_VRC_70.i_xOpnLS, BOOL, 17451744 (8)
        GVL_Devices.GEM1_VRC_70.q_xOPN_DO, BOOL, 17451760 (8)
        GVL_Devices.GEM1_VVC_20, FB_TurbVentvalve_NO, 17799040 (1472)
        GVL_Devices.GEM1_VVC_20.q_xCLS_DO, BOOL, 17800480 (8)
        GVL_Devices.GEM1_VVC_30, FB_TurbVentvalve_NO, 17800512 (1472)
        GVL_Devices.GEM1_VVC_30.q_xCLS_DO, BOOL, 17801952 (8)
        GVL_Devices.GEM1_VVC_40, FB_VVC, 15892256 (640)
        GVL_Devices.GEM1_VVC_40.q_xOPN_DO, BOOL, 15892864 (8)
        GVL_Devices.GEM1_VVC_50, FB_TurbVentvalve_NO, 17801984 (1472)
        GVL_Devices.GEM1_VVC_50.q_xCLS_DO, BOOL, 17803424 (8)
        GVL_Devices.GEM2_GCC_30, FB_MKS422, 18228544 (85056)
        GVL_Devices.GEM2_GCC_30.i_iPRESS_R, INT, 18313504 (16)
        GVL_Devices.GEM2_GCC_30.q_xHV_DIS, BOOL, 18313520 (8)
        GVL_Devices.GEM2_GCC_50, FB_MKS422, 18481408 (85056)
        GVL_Devices.GEM2_GCC_50.i_iPRESS_R, INT, 18566368 (16)
        GVL_Devices.GEM2_GCC_50.q_xHV_DIS, BOOL, 18566384 (8)
        GVL_Devices.GEM2_GCC_60, FB_MKS422, 18734336 (85056)
        GVL_Devices.GEM2_GCC_60.i_iPRESS_R, INT, 18819296 (16)
        GVL_Devices.GEM2_GCC_60.q_xHV_DIS, BOOL, 18819312 (8)
        GVL_Devices.GEM2_GCC_70, FB_MKS422, 18987200 (85056)
        GVL_Devices.GEM2_GCC_70.i_iPRESS_R, INT, 19072160 (16)
        GVL_Devices.GEM2_GCC_70.q_xHV_DIS, BOOL, 19072176 (8)
        GVL_Devices.GEM2_GCM_40, ST_VG, 19158656 (1056)
        GVL_Devices.GEM2_GCM_41, FB_GCM, 19156160 (1248)
        GVL_Devices.GEM2_GCM_41.i_iPRESS_R, INT, 19157392 (16)
        GVL_Devices.GEM2_GCM_42, FB_GCM, 19157408 (1248)
        GVL_Devices.GEM2_GCM_42.i_iPRESS_R, INT, 19158640 (16)
        GVL_Devices.GEM2_GPI_10, FB_MKS317A, 17976832 (83904)
        GVL_Devices.GEM2_GPI_10.i_iPRESS_R, INT, 18060672 (16)
        GVL_Devices.GEM2_GPI_11, FB_MKS275, 18060736 (83904)
        GVL_Devices.GEM2_GPI_11.i_iPRESS_R, INT, 18144448 (16)
        GVL_Devices.GEM2_GPI_21, FB_MKS275, 18144640 (83904)
        GVL_Devices.GEM2_GPI_21.i_iPRESS_R, INT, 18228352 (16)
        GVL_Devices.GEM2_GPI_30, FB_MKS317A, 18313600 (83904)
        GVL_Devices.GEM2_GPI_30.i_iPRESS_R, INT, 18397440 (16)
        GVL_Devices.GEM2_GPI_31, FB_MKS275, 18397504 (83904)
        GVL_Devices.GEM2_GPI_31.i_iPRESS_R, INT, 18481216 (16)
        GVL_Devices.GEM2_GPI_50, FB_MKS317, 18566464 (83968)
        GVL_Devices.GEM2_GPI_50.i_iPRESS_R, INT, 18650144 (16)
        GVL_Devices.GEM2_GPI_51, FB_MKS275, 18650432 (83904)
        GVL_Devices.GEM2_GPI_51.i_iPRESS_R, INT, 18734144 (16)
        GVL_Devices.GEM2_GPI_60, FB_MKS317A, 18819392 (83904)
        GVL_Devices.GEM2_GPI_60.i_iPRESS_R, INT, 18903232 (16)
        GVL_Devices.GEM2_GPI_61, FB_MKS275, 18903296 (83904)
        GVL_Devices.GEM2_GPI_61.i_iPRESS_R, INT, 18987008 (16)
        GVL_Devices.GEM2_GPI_70, FB_MKS317A, 19072256 (83904)
        GVL_Devices.GEM2_GPI_70.i_iPRESS_R, INT, 19156096 (16)
        GVL_Devices.GEM2_PRO_10, FB_KashiyamaPump, 21070656 (832)
        GVL_Devices.GEM2_PRO_10.i_xAlarm, BOOL, 21071456 (8)
        GVL_Devices.GEM2_PRO_10.i_xIsRun, BOOL, 21071472 (8)
        GVL_Devices.GEM2_PRO_10.i_xLocal, BOOL, 21071448 (8)
        GVL_Devices.GEM2_PRO_10.i_xWarning, BOOL, 21071464 (8)
        GVL_Devices.GEM2_PRO_10.q_xLspdDo, BOOL, 21071440 (8)
        GVL_Devices.GEM2_PRO_10.q_xResetDo, BOOL, 21071432 (8)
        GVL_Devices.GEM2_PRO_10.q_xRunDO, BOOL, 21071424 (8)
        GVL_Devices.GEM2_PRO_20, FB_KashiyamaPump, 21071488 (832)
        GVL_Devices.GEM2_PRO_20.i_xAlarm, BOOL, 21072288 (8)
        GVL_Devices.GEM2_PRO_20.i_xIsRun, BOOL, 21072304 (8)
        GVL_Devices.GEM2_PRO_20.i_xLocal, BOOL, 21072280 (8)
        GVL_Devices.GEM2_PRO_20.i_xWarning, BOOL, 21072296 (8)
        GVL_Devices.GEM2_PRO_20.q_xLspdDo, BOOL, 21072272 (8)
        GVL_Devices.GEM2_PRO_20.q_xResetDo, BOOL, 21072264 (8)
        GVL_Devices.GEM2_PRO_20.q_xRunDO, BOOL, 21072256 (8)
        GVL_Devices.GEM2_PRO_30, FB_ScrollPump, 21069312 (448)
        GVL_Devices.GEM2_PRO_30.q_xRunDo, BOOL, 21069728 (8)
        GVL_Devices.GEM2_PRO_50, FB_ScrollPump, 21069760 (448)
        GVL_Devices.GEM2_PRO_50.q_xRunDo, BOOL, 21070176 (8)
        GVL_Devices.GEM2_PRO_60, FB_ScrollPump, 21070208 (448)
        GVL_Devices.GEM2_PRO_60.q_xRunDo, BOOL, 21070624 (8)
        GVL_Devices.GEM2_PTM_30, FB_PTM_Agilent, 20723712 (86400)
        GVL_Devices.GEM2_PTM_30.i_iCurrentMon, INT, 20809952 (16)
        GVL_Devices.GEM2_PTM_30.i_iPowerMon, INT, 20809936 (16)
        GVL_Devices.GEM2_PTM_30.i_iRawSpeed, INT, 20809968 (16)
        GVL_Devices.GEM2_PTM_30.i_iTempMon, INT, 20809920 (16)
        GVL_Devices.GEM2_PTM_30.i_xFault, BOOL, 20809984 (8)
        GVL_Devices.GEM2_PTM_30.i_xLSpd, BOOL, 20809912 (8)
        GVL_Devices.GEM2_PTM_30.i_xR1, BOOL, 20809896 (8)
        GVL_Devices.GEM2_PTM_30.i_xR2, BOOL, 20809904 (8)
        GVL_Devices.GEM2_PTM_30.i_xSTART, BOOL, 20809888 (8)
        GVL_Devices.GEM2_PTM_30.q_RunDO, BOOL, 20809992 (8)
        GVL_Devices.GEM2_PTM_30.q_xLSpd, BOOL, 20810000 (8)
        GVL_Devices.GEM2_PTM_50, FB_PTM_Agilent, 20810112 (86400)
        GVL_Devices.GEM2_PTM_50.i_iCurrentMon, INT, 20896352 (16)
        GVL_Devices.GEM2_PTM_50.i_iPowerMon, INT, 20896336 (16)
        GVL_Devices.GEM2_PTM_50.i_iRawSpeed, INT, 20896368 (16)
        GVL_Devices.GEM2_PTM_50.i_iTempMon, INT, 20896320 (16)
        GVL_Devices.GEM2_PTM_50.i_xFault, BOOL, 20896384 (8)
        GVL_Devices.GEM2_PTM_50.i_xLSpd, BOOL, 20896312 (8)
        GVL_Devices.GEM2_PTM_50.i_xR1, BOOL, 20896296 (8)
        GVL_Devices.GEM2_PTM_50.i_xR2, BOOL, 20896304 (8)
        GVL_Devices.GEM2_PTM_50.i_xSTART, BOOL, 20896288 (8)
        GVL_Devices.GEM2_PTM_50.q_RunDO, BOOL, 20896392 (8)
        GVL_Devices.GEM2_PTM_50.q_xLSpd, BOOL, 20896400 (8)
        GVL_Devices.GEM2_PTM_60, FB_PTM_Agilent, 20896512 (86400)
        GVL_Devices.GEM2_PTM_60.i_iCurrentMon, INT, 20982752 (16)
        GVL_Devices.GEM2_PTM_60.i_iPowerMon, INT, 20982736 (16)
        GVL_Devices.GEM2_PTM_60.i_iRawSpeed, INT, 20982768 (16)
        GVL_Devices.GEM2_PTM_60.i_iTempMon, INT, 20982720 (16)
        GVL_Devices.GEM2_PTM_60.i_xFault, BOOL, 20982784 (8)
        GVL_Devices.GEM2_PTM_60.i_xLSpd, BOOL, 20982712 (8)
        GVL_Devices.GEM2_PTM_60.i_xR1, BOOL, 20982696 (8)
        GVL_Devices.GEM2_PTM_60.i_xR2, BOOL, 20982704 (8)
        GVL_Devices.GEM2_PTM_60.i_xSTART, BOOL, 20982688 (8)
        GVL_Devices.GEM2_PTM_60.q_RunDO, BOOL, 20982792 (8)
        GVL_Devices.GEM2_PTM_60.q_xLSpd, BOOL, 20982800 (8)
        GVL_Devices.GEM2_PTM_70, FB_PTM_Agilent, 20982912 (86400)
        GVL_Devices.GEM2_PTM_70.i_iCurrentMon, INT, 21069152 (16)
        GVL_Devices.GEM2_PTM_70.i_iPowerMon, INT, 21069136 (16)
        GVL_Devices.GEM2_PTM_70.i_iRawSpeed, INT, 21069168 (16)
        GVL_Devices.GEM2_PTM_70.i_iTempMon, INT, 21069120 (16)
        GVL_Devices.GEM2_PTM_70.i_xFault, BOOL, 21069184 (8)
        GVL_Devices.GEM2_PTM_70.i_xLSpd, BOOL, 21069112 (8)
        GVL_Devices.GEM2_PTM_70.i_xR1, BOOL, 21069096 (8)
        GVL_Devices.GEM2_PTM_70.i_xR2, BOOL, 21069104 (8)
        GVL_Devices.GEM2_PTM_70.i_xSTART, BOOL, 21069088 (8)
        GVL_Devices.GEM2_PTM_70.q_RunDO, BOOL, 21069192 (8)
        GVL_Devices.GEM2_PTM_70.q_xLSpd, BOOL, 21069200 (8)
        GVL_Devices.GEM2_VCN_40, FB_VCN, 20723200 (480)
        GVL_Devices.GEM2_VCN_40.q_iRawPosition, INT, 20723648 (16)
        GVL_Devices.GEM2_VGC_10, FB_VGC, 19159744 (173440)
        GVL_Devices.GEM2_VGC_10.i_xClsLS, BOOL, 19333096 (8)
        GVL_Devices.GEM2_VGC_10.i_xOpnLS, BOOL, 19333088 (8)
        GVL_Devices.GEM2_VGC_10.q_xOPN_DO, BOOL, 19333104 (8)
        GVL_Devices.GEM2_VGC_20, FB_VGC, 19333184 (173440)
        GVL_Devices.GEM2_VGC_20.i_xClsLS, BOOL, 19506536 (8)
        GVL_Devices.GEM2_VGC_20.i_xOpnLS, BOOL, 19506528 (8)
        GVL_Devices.GEM2_VGC_20.q_xOPN_DO, BOOL, 19506544 (8)
        GVL_Devices.GEM2_VGC_30, FB_VGC, 19506624 (173440)
        GVL_Devices.GEM2_VGC_30.i_xClsLS, BOOL, 19679976 (8)
        GVL_Devices.GEM2_VGC_30.i_xOpnLS, BOOL, 19679968 (8)
        GVL_Devices.GEM2_VGC_30.q_xOPN_DO, BOOL, 19679984 (8)
        GVL_Devices.GEM2_VGC_40, FB_VGC, 19680064 (173440)
        GVL_Devices.GEM2_VGC_40.i_xClsLS, BOOL, 19853416 (8)
        GVL_Devices.GEM2_VGC_40.i_xOpnLS, BOOL, 19853408 (8)
        GVL_Devices.GEM2_VGC_40.q_xOPN_DO, BOOL, 19853424 (8)
        GVL_Devices.GEM2_VGC_50, FB_VGC, 19853504 (173440)
        GVL_Devices.GEM2_VGC_50.i_xClsLS, BOOL, 20026856 (8)
        GVL_Devices.GEM2_VGC_50.i_xOpnLS, BOOL, 20026848 (8)
        GVL_Devices.GEM2_VGC_50.q_xOPN_DO, BOOL, 20026864 (8)
        GVL_Devices.GEM2_VGC_60, FB_VGC, 20026944 (173440)
        GVL_Devices.GEM2_VGC_60.i_xClsLS, BOOL, 20200296 (8)
        GVL_Devices.GEM2_VGC_60.i_xOpnLS, BOOL, 20200288 (8)
        GVL_Devices.GEM2_VGC_60.q_xOPN_DO, BOOL, 20200304 (8)
        GVL_Devices.GEM2_VGC_70, FB_VGC, 20200384 (173440)
        GVL_Devices.GEM2_VGC_70.i_xClsLS, BOOL, 20373736 (8)
        GVL_Devices.GEM2_VGC_70.i_xOpnLS, BOOL, 20373728 (8)
        GVL_Devices.GEM2_VGC_70.q_xOPN_DO, BOOL, 20373744 (8)
        GVL_Devices.GEM2_VRC_10, FB_Kashiyama_VRC, 20712000 (3072)
        GVL_Devices.GEM2_VRC_10.i_xClsLS, BOOL, 20715048 (8)
        GVL_Devices.GEM2_VRC_10.i_xOpnLS, BOOL, 20715040 (8)
        GVL_Devices.GEM2_VRC_10.q_xOPN_DO, BOOL, 20715056 (8)
        GVL_Devices.GEM2_VRC_20, FB_Kashiyama_VRC, 20715072 (3072)
        GVL_Devices.GEM2_VRC_20.i_xClsLS, BOOL, 20718120 (8)
        GVL_Devices.GEM2_VRC_20.i_xOpnLS, BOOL, 20718112 (8)
        GVL_Devices.GEM2_VRC_20.q_xOPN_DO, BOOL, 20718128 (8)
        GVL_Devices.GEM2_VRC_30, FB_VRC, 20373824 (84544)
        GVL_Devices.GEM2_VRC_30.i_xClsLS, BOOL, 20458344 (8)
        GVL_Devices.GEM2_VRC_30.i_xOpnLS, BOOL, 20458336 (8)
        GVL_Devices.GEM2_VRC_30.q_xOPN_DO, BOOL, 20458352 (8)
        GVL_Devices.GEM2_VRC_50, FB_VRC, 20458368 (84544)
        GVL_Devices.GEM2_VRC_50.i_xClsLS, BOOL, 20542888 (8)
        GVL_Devices.GEM2_VRC_50.i_xOpnLS, BOOL, 20542880 (8)
        GVL_Devices.GEM2_VRC_50.q_xOPN_DO, BOOL, 20542896 (8)
        GVL_Devices.GEM2_VRC_60, FB_VRC, 20542912 (84544)
        GVL_Devices.GEM2_VRC_60.i_xClsLS, BOOL, 20627432 (8)
        GVL_Devices.GEM2_VRC_60.i_xOpnLS, BOOL, 20627424 (8)
        GVL_Devices.GEM2_VRC_60.q_xOPN_DO, BOOL, 20627440 (8)
        GVL_Devices.GEM2_VRC_70, FB_VRC, 20627456 (84544)
        GVL_Devices.GEM2_VRC_70.i_xClsLS, BOOL, 20711976 (8)
        GVL_Devices.GEM2_VRC_70.i_xOpnLS, BOOL, 20711968 (8)
        GVL_Devices.GEM2_VRC_70.q_xOPN_DO, BOOL, 20711984 (8)
        GVL_Devices.GEM2_VVC_30, FB_TurbVentvalve_NO, 20718144 (1472)
        GVL_Devices.GEM2_VVC_30.q_xCLS_DO, BOOL, 20719584 (8)
        GVL_Devices.GEM2_VVC_40, FB_VVC, 20722560 (640)
        GVL_Devices.GEM2_VVC_40.q_xOPN_DO, BOOL, 20723168 (8)
        GVL_Devices.GEM2_VVC_50, FB_TurbVentvalve_NO, 20719616 (1472)
        GVL_Devices.GEM2_VVC_50.q_xCLS_DO, BOOL, 20721056 (8)
        GVL_Devices.GEM2_VVC_70, FB_TurbVentvalve_NO, 20721088 (1472)
        GVL_Devices.GEM2_VVC_70.q_xCLS_DO, BOOL, 20722528 (8)
        GVL_Devices.iWatchdog, UDINT, 14709376 (32)
        GVL_Devices.SATT_MPA_01, FB_MPA, 21072320 (167552)
        GVL_Devices.SATT_MPA_01.i_xInsertedLS, BOOL, 21157984 (8)
        GVL_Devices.SATT_MPA_01.i_xRetractedLS, BOOL, 21157992 (8)
        GVL_Devices.SATT_MPA_01.q_xInsert_DO, BOOL, 21158000 (8)
        GVL_Devices.SATT_MPA_01.q_xRetract_DO, BOOL, 21158008 (8)
        GVL_Devices.SATT_MPA_02, FB_MPA, 21239872 (167552)
        GVL_Devices.SATT_MPA_02.i_xInsertedLS, BOOL, 21325536 (8)
        GVL_Devices.SATT_MPA_02.i_xRetractedLS, BOOL, 21325544 (8)
        GVL_Devices.SATT_MPA_02.q_xInsert_DO, BOOL, 21325552 (8)
        GVL_Devices.SATT_MPA_02.q_xRetract_DO, BOOL, 21325560 (8)
        GVL_Devices.SATT_MPA_03, FB_MPA, 21407424 (167552)
        GVL_Devices.SATT_MPA_03.i_xInsertedLS, BOOL, 21493088 (8)
        GVL_Devices.SATT_MPA_03.i_xRetractedLS, BOOL, 21493096 (8)
        GVL_Devices.SATT_MPA_03.q_xInsert_DO, BOOL, 21493104 (8)
        GVL_Devices.SATT_MPA_03.q_xRetract_DO, BOOL, 21493112 (8)
        GVL_Devices.SATT_MPA_04, FB_MPA, 21574976 (167552)
        GVL_Devices.SATT_MPA_04.i_xInsertedLS, BOOL, 21660640 (8)
        GVL_Devices.SATT_MPA_04.i_xRetractedLS, BOOL, 21660648 (8)
        GVL_Devices.SATT_MPA_04.q_xInsert_DO, BOOL, 21660656 (8)
        GVL_Devices.SATT_MPA_04.q_xRetract_DO, BOOL, 21660664 (8)
        GVL_Devices.SATT_MPA_05, FB_MPA, 21742528 (167552)
        GVL_Devices.SATT_MPA_05.i_xInsertedLS, BOOL, 21828192 (8)
        GVL_Devices.SATT_MPA_05.i_xRetractedLS, BOOL, 21828200 (8)
        GVL_Devices.SATT_MPA_05.q_xInsert_DO, BOOL, 21828208 (8)
        GVL_Devices.SATT_MPA_05.q_xRetract_DO, BOOL, 21828216 (8)
        GVL_Devices.SATT_MPA_06, FB_MPA, 21910080 (167552)
        GVL_Devices.SATT_MPA_06.i_xInsertedLS, BOOL, 21995744 (8)
        GVL_Devices.SATT_MPA_06.i_xRetractedLS, BOOL, 21995752 (8)
        GVL_Devices.SATT_MPA_06.q_xInsert_DO, BOOL, 21995760 (8)
        GVL_Devices.SATT_MPA_06.q_xRetract_DO, BOOL, 21995768 (8)
        GVL_Devices.SATT_MPA_07, FB_MPA, 22077632 (167552)
        GVL_Devices.SATT_MPA_07.i_xInsertedLS, BOOL, 22163296 (8)
        GVL_Devices.SATT_MPA_07.i_xRetractedLS, BOOL, 22163304 (8)
        GVL_Devices.SATT_MPA_07.q_xInsert_DO, BOOL, 22163312 (8)
        GVL_Devices.SATT_MPA_07.q_xRetract_DO, BOOL, 22163320 (8)
        GVL_Devices.SATT_MPA_08, FB_MPA, 22245184 (167552)
        GVL_Devices.SATT_MPA_08.i_xInsertedLS, BOOL, 22330848 (8)
        GVL_Devices.SATT_MPA_08.i_xRetractedLS, BOOL, 22330856 (8)
        GVL_Devices.SATT_MPA_08.q_xInsert_DO, BOOL, 22330864 (8)
        GVL_Devices.SATT_MPA_08.q_xRetract_DO, BOOL, 22330872 (8)
        GVL_Devices.SATT_MPA_09, FB_MPA, 22412736 (167552)
        GVL_Devices.SATT_MPA_09.i_xInsertedLS, BOOL, 22498400 (8)
        GVL_Devices.SATT_MPA_09.i_xRetractedLS, BOOL, 22498408 (8)
        GVL_Devices.SATT_MPA_09.q_xInsert_DO, BOOL, 22498416 (8)
        GVL_Devices.SATT_MPA_09.q_xRetract_DO, BOOL, 22498424 (8)
        GVL_Devices.USG_PIN, FB_TPIP_ADS, 14525632 (90688)

.. raw:: html

   </details>
   <br />


GVL_ILK
^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_ILK.g_FastFaultOutput1, FB_HardwareFFOutput, 22580288 (465408)
        GVL_ILK.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 22580376 (8)
        GVL_ILK.g_FastFaultOutput2, FB_HardwareFFOutput, 23045696 (465408)
        GVL_ILK.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 23045784 (8)
        GVL_ILK.g_fbArbiter, FB_Arbiter, 23511104 (372864)
        GVL_ILK.g_fbArbiter2, FB_Arbiter, 23883968 (372864)
        GVL_ILK.g_fbArbiter3, FB_Arbiter, 24256832 (372864)
        GVL_ILK.GEM1_Aperture_Closed, BOOL, 24629696 (8)
        GVL_ILK.GEM1_Turbo_Running, BOOL, 19159736 (8)
        GVL_ILK.GEM1_Turbo_Valves_Closed, BOOL, 14709432 (8)
        GVL_ILK.GEM1_Turbo_Valves_Open, BOOL, 19159712 (8)
        GVL_ILK.GEM1_TwinscrewPumps_Valves_Open, BOOL, 20723696 (8)
        GVL_ILK.GEM2_Aperture_Closed, BOOL, 24629704 (8)
        GVL_ILK.GEM2_Turbo_Running, BOOL, 20723680 (8)
        GVL_ILK.GEM2_Turbo_Valves_Closed, BOOL, 19159720 (8)
        GVL_ILK.GEM2_Turbo_Valves_Open, BOOL, 19159728 (8)
        GVL_ILK.GEM2_TwinscrewPumps_Valves_Open, BOOL, 20723704 (8)
        GVL_ILK.TwinscrewPumps_Valves_Closed, BOOL, 20723688 (8)
        GVL_ILK.xGATTOverrideMode, BOOL, 14709416 (8)
        GVL_ILK.xGEM1_AperturesOpnOK, BOOL, 24629712 (8)
        GVL_ILK.xGEM1OverrideMode, BOOL, 14709408 (8)
        GVL_ILK.xGEM2_AperturesOpnOK, BOOL, 24629720 (8)
        GVL_ILK.xGEM2OverrideMode, BOOL, 14709424 (8)

.. raw:: html

   </details>
   <br />


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4389600 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.MaxNumberOfAsserts, UINT, 4390048 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390032 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390016 (16)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 8539456 (16)


GVL_Sensors
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>16 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Sensors.GEM1_AIR_1, FB_PressureSensor_PX219, 24629728 (576)
        GVL_Sensors.GEM1_AIR_1.i_iPRESS_R, INT, 24630272 (16)
        GVL_Sensors.GEM1_AIR_2, FB_PressureSensor_PX219, 24630304 (576)
        GVL_Sensors.GEM1_AIR_2.i_iPRESS_R, INT, 24630848 (16)
        GVL_Sensors.GEM1_GFM_41, FB_PressureSensor_PX219, 24632032 (576)
        GVL_Sensors.GEM1_GFM_41.i_iPRESS_R, INT, 24632576 (16)
        GVL_Sensors.GEM1_GFM_42, FB_PressureSensor_PX219, 24632608 (576)
        GVL_Sensors.GEM1_GFM_42.i_iPRESS_R, INT, 24633152 (16)
        GVL_Sensors.GEM2_GFM_41, FB_PressureSensor_PX219, 24633184 (576)
        GVL_Sensors.GEM2_GFM_41.i_iPRESS_R, INT, 24633728 (16)
        GVL_Sensors.GEM2_GFM_42, FB_PressureSensor_PX219, 24633760 (576)
        GVL_Sensors.GEM2_GFM_42.i_iPRESS_R, INT, 24634304 (16)
        GVL_Sensors.GEM2_N2_1, FB_PressureSensor_PX219, 24630880 (576)
        GVL_Sensors.GEM2_N2_1.i_iPRESS_R, INT, 24631424 (16)
        GVL_Sensors.GEM2_N2_2, FB_PressureSensor_PX219, 24631456 (576)
        GVL_Sensors.GEM2_N2_2.i_iPRESS_R, INT, 24632000 (16)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsLogger, FB_ADSLogStringMessageFifoQueue, 4408704 (4128864)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4390064 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 4390624 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 4390592 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4390072 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4392672 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4390080 (512)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 4392704 (16000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4383976 (8)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4388896 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4389024 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4385680 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4389056 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>252 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4180448 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180320 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180256 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180288 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180352 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180128 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4179904 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180032 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180096 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180000 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180160 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180192 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4179968 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4179936 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180064 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4179840 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180224 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4179808 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4179872 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4180576 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4180608 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4181664 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4181600 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4181696 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4181728 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4181760 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4181792 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4181632 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4179696 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4179632 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4179760 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4179472 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4179744 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4179504 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4179456 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4179584 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4179776 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4179600 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4179616 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4179712 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4179488 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4179680 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4179536 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4179568 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4179648 (16)
        Global_Variables.ADSSTATE_START, UINT, 4179520 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4179552 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4179728 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4179664 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247456 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247488 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4247520 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179168 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179392 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179408 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179280 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179200 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179264 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179296 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179216 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179232 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179248 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179312 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179328 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179344 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179360 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179376 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179184 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4179440 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4179424 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4383984 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4181824 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4179800 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4179792 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4388000 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4255136 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260448 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4266720 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4266688 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4266656 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4266752 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4182496 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 8555072 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4246200 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184224 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4382992 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4383000 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 8555008 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248096 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386120 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4385824 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4385696 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246208 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4182480 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 8539040 (128)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 8540032 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4247568 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4247552 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4247584 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4247600 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4247616 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4247936 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4247712 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248032 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4247808 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248000 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248064 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4247648 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4247680 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4247872 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4247776 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4247904 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4247968 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4247840 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4247744 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4181920 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4181984 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4181952 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4181856 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182016 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4181888 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248448 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248192 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4247536 (16)
        Global_Variables.g_DummyVG, ST_VG, 8537984 (1056)
        Global_Variables.g_DummyVG, ST_VG, 8539616 (416)
        Global_Variables.g_iSizeOfGGOArray, INT, 8539504 (16)
        Global_Variables.g_iSizeOfGGOArray, INT, 8537872 (16)
        Global_Variables.g_stSystem, ST_System, 8537888 (88)
        Global_Variables.g_stSystem, ST_System, 8539520 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184192 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184072 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184160 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184176 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247424 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4245888 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4245920 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4387936 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4387968 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4245792 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4245760 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4245728 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184080 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4245952 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4184240 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246176 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4184232 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246192 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4182592 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4388032 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246184 (8)
        Global_Variables.nCTRL_LOGGER_DATA_ARRAY_SIZE, UINT, 8546352 (16)
        Global_Variables.nWatchdogTime, BYTE, 4181848 (8)
        Global_Variables.PI, LREAL, 4182528 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246112 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246144 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246080 (32)
        Global_Variables.stCtrl_GLOBAL_CycleTimeInterpretation, ST_CTRL_CYCLE_TIME_INTERPRETATION, 8555456 (128)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4245984 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4180768 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4180736 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246016 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246048 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4180832 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181152 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181120 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247392 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4180992 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4180800 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181088 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181024 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4180864 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181184 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181056 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4180928 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4180960 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4180896 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4245824 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4245856 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4180640 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4180672 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4180704 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4181832 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4181840 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255072 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255424 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255008 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255360 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4254784 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4253936 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254320 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4254944 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255296 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4254816 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255168 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4254880 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255232 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4182464 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4182448 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182352 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182288 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182304 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182320 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182272 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182336 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182416 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182368 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182400 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4182432 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182384 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 8548032 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4387328 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4387072 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4387040 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4387264 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4387296 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4387136 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4387168 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4387200 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4387104 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4387232 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4387584 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4387456 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4387424 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4387360 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4387520 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4387552 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4387392 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4387488 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4388480 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4388064 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4181536 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4181440 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4181504 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4181472 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4181568 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255488 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_LCLS_Vacuum, ST_LibVersion, 8539168 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386432 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 8555136 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 8547744 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4386720 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4183744 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4389312 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4389728 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183136 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 8537568 (288)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 8537928 (48)
        LCLS_Vacuum.LCLSVacuumSerialDriverLib.L2SI_Vacuum_Library.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 8539560 (48)


MAIN
^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MAIN.fbLogHandler, FB_LogHandler, 8597312 (5785856)
        MAIN.iWatchdog, UDINT, 8555424 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>21 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 8545792 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 8543344 (16)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 8543360 (1216)
        PMPS_GVL.cstSafeBeam, ST_BeamParams, 8544576 (1216)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 8545824 (512)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 8543136 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 8543232 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 8542592 (512)
        PMPS_GVL.g_areVBoundariesK, REAL, 8546912 (512)
        PMPS_GVL.g_areVBoundariesL, REAL, 8546400 (512)
        PMPS_GVL.g_cBoundaries, INT, 8546336 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 8545808 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 8543296 (32)
        PMPS_GVL.MAX_STOPPERS, UINT, 8543328 (16)
        PMPS_GVL.PERange, PE_Ranges, 8543104 (32)
        PMPS_GVL.reVHyst, REAL, 8546368 (32)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 8541376 (1216)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 8540160 (1216)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 8543168 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 8547456 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, DINT, 8547424 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 8547488 (256)


PRG_GATT
^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GATT.arrTable, FLOAT, 14391424 (1152)
        PRG_GATT.bARWactive, BOOL, 14388000 (8)
        PRG_GATT.bError, BOOL, 14385416 (8)
        PRG_GATT.bInit, BOOL, 14388008 (8)
        PRG_GATT.eErrorId, E_CTRL_ERRORCODES, 14387984 (16)
        PRG_GATT.eMode, E_CTRL_MODE, 14387968 (16)
        PRG_GATT.fb_PID, FB_BasicPID, 14386048 (1856)
        PRG_GATT.fbCTRL_PID, FB_CTRL_PID, 14388480 (2816)
        PRG_GATT.fKp, REAL, 14387904 (32)
        PRG_GATT.fSetpointValue, REAL, 14386016 (32)
        PRG_GATT.fTn, REAL, 14387936 (32)
        PRG_GATT.nDataTable_NumberOfRows, INT, 14385424 (16)
        PRG_GATT.stCTRL_LIN_INTERPOLATION_PARAMS, ST_CTRL_LIN_INTERPOLATION_PARAMS, 14391296 (128)
        PRG_GATT.stCTRL_PID_PARAMS, ST_CTRL_PID_PARAMS, 14388032 (448)
        PRG_GATT.VCN_Req_Pos, REAL, 14385984 (32)

.. raw:: html

   </details>
   <br />


PRG_GEM1
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GEM1.arrTable_GEM1, FLOAT, 14393344 (3840)
        PRG_GEM1.bARWactive, BOOL, 14397288 (8)
        PRG_GEM1.bError, BOOL, 14388024 (8)
        PRG_GEM1.bExtrapolate, BOOL, 14397248 (8)
        PRG_GEM1.bHold, BOOL, 14397280 (8)
        PRG_GEM1.bInit, BOOL, 14400576 (8)
        PRG_GEM1.bReset, BOOL, 14388016 (8)
        PRG_GEM1.bSync, BOOL, 14397256 (8)
        PRG_GEM1.eErrorId, E_CTRL_ERRORCODES, 14397296 (16)
        PRG_GEM1.eMode, E_CTRL_MODE, 14397264 (16)
        PRG_GEM1.fbCTRL_DEADBAND, FB_CTRL_DEADBAND, 14402496 (832)
        PRG_GEM1.fbCTRL_LIN_INTERPOLATION, FB_CTRL_LIN_INTERPOLATION, 14400640 (1728)
        PRG_GEM1.fbCTRL_PID, FB_CTRL_PID, 14397760 (2816)
        PRG_GEM1.fKp1, REAL, 14393216 (32)
        PRG_GEM1.fKp2, REAL, 14393280 (32)
        PRG_GEM1.fManValue, FLOAT, 14397184 (64)
        PRG_GEM1.fTn1, REAL, 14393248 (32)
        PRG_GEM1.fTn2, REAL, 14393312 (32)
        PRG_GEM1.FTrig, F_TRIG, 14403680 (64)
        PRG_GEM1.pid_on, TON, 14403456 (224)
        PRG_GEM1.stCTRL_DEADBAND_PARAMS, ST_CTRL_DEADBAND_PARAMS, 14403328 (128)
        PRG_GEM1.stCTRL_LIN_INTERPOLATION_PARAMS_GEM, ST_CTRL_LIN_INTERPOLATION_PARAMS, 14402368 (128)
        PRG_GEM1.stCTRL_PID_PARAMS, ST_CTRL_PID_PARAMS, 14397312 (448)
        PRG_GEM1.wait, TIME, 14400608 (32)

.. raw:: html

   </details>
   <br />


PRG_GEM1_DIFF_PUMP
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GEM1_DIFF_PUMP.bInit, BOOL, 8539608 (8)
        PRG_GEM1_DIFF_PUMP.rMaxBackingPressure, REAL, 8597280 (32)


PRG_GEM2
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GEM2.arrTable_GEM2, FLOAT, 14403904 (3968)
        PRG_GEM2.bARWactive, BOOL, 14408400 (8)
        PRG_GEM2.bError, BOOL, 14400592 (8)
        PRG_GEM2.bExtrapolate, BOOL, 14400600 (8)
        PRG_GEM2.bHold, BOOL, 14403896 (8)
        PRG_GEM2.bInit, BOOL, 14408408 (8)
        PRG_GEM2.bReset, BOOL, 14400584 (8)
        PRG_GEM2.bSync, BOOL, 14403888 (8)
        PRG_GEM2.eErrorId, E_CTRL_ERRORCODES, 14408384 (16)
        PRG_GEM2.eMode, E_CTRL_MODE, 14403872 (16)
        PRG_GEM2.fbCTRL_DEADBAND, FB_CTRL_DEADBAND, 14413120 (832)
        PRG_GEM2.fbCTRL_LIN_INTERPOLATION, FB_CTRL_LIN_INTERPOLATION, 14411264 (1728)
        PRG_GEM2.fbCTRL_PID, FB_CTRL_PID, 14408448 (2816)
        PRG_GEM2.fKp1, REAL, 14403744 (32)
        PRG_GEM2.fKp2, REAL, 14403808 (32)
        PRG_GEM2.fManValue, FLOAT, 14407872 (64)
        PRG_GEM2.fTn1, REAL, 14403776 (32)
        PRG_GEM2.fTn2, REAL, 14403840 (32)
        PRG_GEM2.FTrig, F_TRIG, 14414304 (64)
        PRG_GEM2.pid_on, TON, 14414080 (224)
        PRG_GEM2.stCTRL_DEADBAND_PARAMS, ST_CTRL_DEADBAND_PARAMS, 14413952 (128)
        PRG_GEM2.stCTRL_LIN_INTERPOLATION_PARAMS_GEM, ST_CTRL_LIN_INTERPOLATION_PARAMS, 14412992 (128)
        PRG_GEM2.stCTRL_PID_PARAMS, ST_CTRL_PID_PARAMS, 14407936 (448)
        PRG_GEM2.wait, TIME, 14408416 (32)

.. raw:: html

   </details>
   <br />


PRG_GEM2_DIFF_PUMP
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GEM2_DIFF_PUMP.bInit, BOOL, 14385408 (8)
        PRG_GEM2_DIFF_PUMP.rMaxBackingPressure, REAL, 14385376 (32)


PRG_PMPS
^^^^^^^^

.. raw:: html

   <details>
       <summary>12 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PMPS.ar1, BOOL, 14414384 (8)
        PRG_PMPS.ar2, BOOL, 14414392 (8)
        PRG_PMPS.ar3, BOOL, 14524800 (8)
        PRG_PMPS.bRemove, BOOL, 14524808 (8)
        PRG_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 14414720 (110080)
        PRG_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 14415520 (1216)
        PRG_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 14416736 (1216)
        PRG_PMPS.fbArbiterIO.xTxPDO_state, BIT, 14417953 (1)
        PRG_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 14417952 (1)
        PRG_PMPS.nReqID, UDINT, 14524832 (32)
        PRG_PMPS.nReqRM, UDINT, 14524864 (32)
        PRG_PMPS.test, BOOL, 14414376 (8)

.. raw:: html

   </details>
   <br />


PRG_SATT
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SATT.PMPS_OK, BOOL, 14414368 (8)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4389280 (32)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 24683872 (960)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 24653792 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 24653280 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 24653408 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 24653536 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 24653152 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 24653664 (128)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 24634592 (2048)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 24639776 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 24636640 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 24638720 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 24639744 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 24638688 (32)


