v3.1.0/_sources/plc-lfe-gem_plc_lfe_gem_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.88.32.1.1
      -
    * - Target IP address
      - 172.21.88.32
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _plc_lfe_gem_pragmas:

Pragmas
-------

Total pragmas found: 290
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        L2SI Vacuum Library, SLAC, , 0.0.0
        LCLS General, SLAC, Unset, 2.8.1
        LCLS Vacuum, SLAC - LCLS, Unset, 2.3.0
        LCLSVacuumSerialDriverLib, SLAC, , 1.1.4
        PMPS, SLAC - LCLS, Unset, 3.0.14
        SysFile, System, , 3.5.9.0
        Tc2_ControllerToolbox, Beckhoff Automation GmbH, Unset, 3.4.1.4
        Tc2_DataExchange, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.11.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, , 3.3.37.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.2.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.22.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, 3.3.35.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.22.0
        Tc3_Interfaces, Beckhoff Automation GmbH, , 3.4.3.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.6.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.0.1.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4387008 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 655701904 (8)
        Constants.bLittleEndian, BOOL, 655701728 (8)
        Constants.bSimulationMode, BOOL, 655701736 (8)
        Constants.CompilerVersion, VERSION, 655701808 (64)
        Constants.CompilerVersionNumeric, DWORD, 655701952 (32)
        Constants.gc_GaugeValidState, INT, 8537872 (16)
        Constants.gc_GaugeValidState, INT, 8540240 (16)
        Constants.gc_iSizeOfGGOArray, INT, 8537856 (16)
        Constants.gc_iSizeOfGGOArray, INT, 8540224 (16)
        Constants.nPackMode, UINT, 655701888 (16)
        Constants.nRegisterSize, WORD, 655701872 (16)
        Constants.RuntimeVersion, VERSION, 655701744 (64)
        Constants.RuntimeVersionNumeric, DWORD, 655701920 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, INT, 4096096 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4388896 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4389024 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4389056 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4389088 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>253 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4180448 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180320 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180256 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180288 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180352 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180128 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4179904 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180032 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180096 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180000 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180160 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180192 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4179968 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4179936 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180064 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4179840 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180224 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4179808 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4179872 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4180576 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4180608 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4181664 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4181600 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4181696 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4181728 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4181760 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4181792 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4181632 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4179712 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4179648 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4179776 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4179488 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4179760 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4179520 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4179472 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4179600 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4179792 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4179616 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4179632 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4179728 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4179504 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4179696 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4179552 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4179584 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4179664 (16)
        Global_Variables.ADSSTATE_START, UINT, 4179536 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4179568 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4179744 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4179680 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247488 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247520 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246224 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4097200 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4096432 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179408 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179424 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179296 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179216 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179280 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179312 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179232 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179248 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179264 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179328 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179344 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179360 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179376 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179392 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179200 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4179456 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4179440 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4385680 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4181840 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4181832 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097192 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4181824 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4388000 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260448 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260480 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4266752 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4266720 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4266688 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4266784 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4182496 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 638760832 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4246216 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184208 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4383952 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4383960 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 638760768 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248096 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386120 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4385824 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4385696 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246240 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183136 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 8539072 (128)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 8540800 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4247584 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4247568 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4247600 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4247616 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4247632 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4247936 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4247712 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248032 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4247808 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248000 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248064 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4247648 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4247680 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4247872 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4247776 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4247904 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4247968 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4247840 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4247744 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4181952 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182016 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4181984 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4181888 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182048 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4181920 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248448 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248192 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4247552 (16)
        Global_Variables.g_DummyVG, ST_VG, 8538016 (1056)
        Global_Variables.g_DummyVG, ST_VG, 8540384 (416)
        Global_Variables.g_iSizeOfGGOArray, INT, 8537888 (16)
        Global_Variables.g_iSizeOfGGOArray, INT, 8540256 (16)
        Global_Variables.g_stSystem, ST_System, 8537904 (88)
        Global_Variables.g_stSystem, ST_System, 8540272 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184224 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184088 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184176 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184192 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247456 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4245888 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4245920 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4387936 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4387968 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4245792 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4245760 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4245728 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184160 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4245952 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246080 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246096 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4184216 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246208 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4182592 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4388032 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246104 (8)
        Global_Variables.nCTRL_LOGGER_DATA_ARRAY_SIZE, UINT, 638761184 (16)
        Global_Variables.nWatchdogTime, BYTE, 4181864 (8)
        Global_Variables.PI, LREAL, 4182528 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246144 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246176 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246112 (32)
        Global_Variables.stCtrl_GLOBAL_CycleTimeInterpretation, ST_CTRL_CYCLE_TIME_INTERPRETATION, 638761216 (128)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4245984 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4180768 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4180736 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246016 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246048 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4180832 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181152 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181120 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247424 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4180992 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4180800 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181088 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181024 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4180864 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181184 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181056 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4180928 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4180960 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4180896 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4245824 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4245856 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4180640 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4180672 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4180704 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4181848 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4181856 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255072 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255424 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255008 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255360 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4254784 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4253936 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254320 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4254944 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255296 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4254816 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255168 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4254880 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255232 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 8539200 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4182480 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4182464 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182368 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182304 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182320 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182336 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4181872 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182352 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182432 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182384 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182416 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4182448 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182400 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 638753760 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4387328 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4387072 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4387040 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4387264 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4387296 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4387136 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4387168 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4387200 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4387104 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4387232 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4387584 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4387456 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4387424 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4387360 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4387520 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4387552 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4387392 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4387488 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4388480 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4388064 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4181536 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4181440 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4181504 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4181472 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4181568 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255488 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386432 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 638760896 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 638753472 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4386720 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4178912 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4183776 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4389344 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4389760 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183168 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 8537568 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 638753184 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4389280 (32)


GVL_Control
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Control.fGEM1SetpointValue, REAL, 644774304 (32)
        GVL_Control.fGEM2SetpointValue, REAL, 644774336 (32)
        GVL_Control.GEM1_GO, BOOL, 644773608 (8)
        GVL_Control.GEM2_GO, BOOL, 644773616 (8)


GVL_Devices
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>384 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Devices.DSG_PIN, FB_TPIP_ADS, 644955776 (90688)
        GVL_Devices.DSV_VGC, FB_Valve_Interface, 645046464 (3008)
        GVL_Devices.DSV_VGC.i_xClsLS, BOOL, 645049448 (8)
        GVL_Devices.DSV_VGC.i_xOpnLS, BOOL, 645049440 (8)
        GVL_Devices.GATT_GMP_10, FB_GCM, 648360448 (1248)
        GVL_Devices.GATT_GMP_10.i_iPRESS_R, INT, 648361680 (16)
        GVL_Devices.GATT_GMP_11, FB_CMR362, 648359232 (1216)
        GVL_Devices.GATT_GMP_11.i_iPRESS_R, INT, 648360432 (16)
        GVL_Devices.GATT_GPI_10, FB_MKS317A, 648272960 (86272)
        GVL_Devices.GATT_GPI_10.i_iPRESS_R, INT, 648359168 (16)
        GVL_Devices.GATT_VCN_10, FB_VCN, 648361728 (82496)
        GVL_Devices.GATT_VCN_10.q_iRawPosition, INT, 648444128 (16)
        GVL_Devices.GATT_VRC_10, FB_VRC, 648444224 (84544)
        GVL_Devices.GATT_VRC_10.i_xClsLS, BOOL, 648528744 (8)
        GVL_Devices.GATT_VRC_10.i_xOpnLS, BOOL, 648528736 (8)
        GVL_Devices.GATT_VRC_10.q_xOPN_DO, BOOL, 648528752 (8)
        GVL_Devices.GATT_VVC_10, FB_VVC, 648528768 (640)
        GVL_Devices.GATT_VVC_10.q_xOPN_DO, BOOL, 648529376 (8)
        GVL_Devices.GEM1_GCC_10, FB_MKS422, 645049472 (87680)
        GVL_Devices.GEM1_GCC_10.i_iPRESS_R, INT, 645136832 (16)
        GVL_Devices.GEM1_GCC_10.q_xHV_DIS, BOOL, 645136848 (8)
        GVL_Devices.GEM1_GCC_20, FB_MKS422, 645223424 (87680)
        GVL_Devices.GEM1_GCC_20.i_iPRESS_R, INT, 645310784 (16)
        GVL_Devices.GEM1_GCC_20.q_xHV_DIS, BOOL, 645310800 (8)
        GVL_Devices.GEM1_GCC_30, FB_MKS422, 645397376 (87680)
        GVL_Devices.GEM1_GCC_30.i_iPRESS_R, INT, 645484736 (16)
        GVL_Devices.GEM1_GCC_30.q_xHV_DIS, BOOL, 645484752 (8)
        GVL_Devices.GEM1_GCC_50, FB_MKS422, 645571328 (87680)
        GVL_Devices.GEM1_GCC_50.i_iPRESS_R, INT, 645658688 (16)
        GVL_Devices.GEM1_GCC_50.q_xHV_DIS, BOOL, 645658704 (8)
        GVL_Devices.GEM1_GCM_40, ST_VG, 646265728 (1056)
        GVL_Devices.GEM1_GCM_41, FB_GCM, 646263232 (1248)
        GVL_Devices.GEM1_GCM_41.i_iPRESS_R, INT, 646264464 (16)
        GVL_Devices.GEM1_GCM_42, FB_GCM, 646264480 (1248)
        GVL_Devices.GEM1_GCM_42.i_iPRESS_R, INT, 646265712 (16)
        GVL_Devices.GEM1_GPI_10, FB_MKS317A, 645137152 (86272)
        GVL_Devices.GEM1_GPI_10.i_iPRESS_R, INT, 645223360 (16)
        GVL_Devices.GEM1_GPI_11, FB_MKS275, 645745280 (86336)
        GVL_Devices.GEM1_GPI_11.i_iPRESS_R, INT, 645831360 (16)
        GVL_Devices.GEM1_GPI_20, FB_MKS317A, 645311104 (86272)
        GVL_Devices.GEM1_GPI_20.i_iPRESS_R, INT, 645397312 (16)
        GVL_Devices.GEM1_GPI_30, FB_MKS317A, 645485056 (86272)
        GVL_Devices.GEM1_GPI_30.i_iPRESS_R, INT, 645571264 (16)
        GVL_Devices.GEM1_GPI_31, FB_MKS275, 645831616 (86336)
        GVL_Devices.GEM1_GPI_31.i_iPRESS_R, INT, 645917696 (16)
        GVL_Devices.GEM1_GPI_50, FB_MKS317A, 645659008 (86272)
        GVL_Devices.GEM1_GPI_50.i_iPRESS_R, INT, 645745216 (16)
        GVL_Devices.GEM1_GPI_51, FB_MKS275, 645917952 (86336)
        GVL_Devices.GEM1_GPI_51.i_iPRESS_R, INT, 646004032 (16)
        GVL_Devices.GEM1_GPI_60, FB_MKS317A, 646004288 (86272)
        GVL_Devices.GEM1_GPI_60.i_iPRESS_R, INT, 646090496 (16)
        GVL_Devices.GEM1_GPI_61, FB_MKS275, 646090560 (86336)
        GVL_Devices.GEM1_GPI_61.i_iPRESS_R, INT, 646176640 (16)
        GVL_Devices.GEM1_GPI_71, FB_MKS275, 646176896 (86336)
        GVL_Devices.GEM1_GPI_71.i_iPRESS_R, INT, 646262976 (16)
        GVL_Devices.GEM1_PRO_20, FB_ScrollPump, 648271616 (448)
        GVL_Devices.GEM1_PRO_20.q_xRunDo, BOOL, 648272032 (8)
        GVL_Devices.GEM1_PRO_30, FB_ScrollPump, 648272064 (448)
        GVL_Devices.GEM1_PRO_30.q_xRunDo, BOOL, 648272480 (8)
        GVL_Devices.GEM1_PRO_50, FB_ScrollPump, 648272512 (448)
        GVL_Devices.GEM1_PRO_50.q_xRunDo, BOOL, 648272928 (8)
        GVL_Devices.GEM1_PRO_60, FB_KashiyamaPump, 647932992 (832)
        GVL_Devices.GEM1_PRO_60.i_xAlarm, BOOL, 647933792 (8)
        GVL_Devices.GEM1_PRO_60.i_xIsRun, BOOL, 647933808 (8)
        GVL_Devices.GEM1_PRO_60.i_xRemote, BOOL, 647933784 (8)
        GVL_Devices.GEM1_PRO_60.i_xWarning, BOOL, 647933800 (8)
        GVL_Devices.GEM1_PRO_60.q_xLspdDo, BOOL, 647933776 (8)
        GVL_Devices.GEM1_PRO_60.q_xResetDo, BOOL, 647933768 (8)
        GVL_Devices.GEM1_PRO_60.q_xRunDO, BOOL, 647933760 (8)
        GVL_Devices.GEM1_PRO_70, FB_KashiyamaPump, 647933824 (832)
        GVL_Devices.GEM1_PRO_70.i_xAlarm, BOOL, 647934624 (8)
        GVL_Devices.GEM1_PRO_70.i_xIsRun, BOOL, 647934640 (8)
        GVL_Devices.GEM1_PRO_70.i_xRemote, BOOL, 647934616 (8)
        GVL_Devices.GEM1_PRO_70.i_xWarning, BOOL, 647934632 (8)
        GVL_Devices.GEM1_PRO_70.q_xLspdDo, BOOL, 647934608 (8)
        GVL_Devices.GEM1_PRO_70.q_xResetDo, BOOL, 647934600 (8)
        GVL_Devices.GEM1_PRO_70.q_xRunDO, BOOL, 647934592 (8)
        GVL_Devices.GEM1_PTM_10, FB_PTM_TwisTorr, 647934656 (82688)
        GVL_Devices.GEM1_PTM_10.i_xAtSpd, BOOL, 648017320 (8)
        GVL_Devices.GEM1_PTM_10.i_xFault, BOOL, 648017328 (8)
        GVL_Devices.GEM1_PTM_10.q_RunDO, BOOL, 648017336 (8)
        GVL_Devices.GEM1_PTM_20, FB_PTM_TwisTorr, 648017344 (82688)
        GVL_Devices.GEM1_PTM_20.i_xAtSpd, BOOL, 648100008 (8)
        GVL_Devices.GEM1_PTM_20.i_xFault, BOOL, 648100016 (8)
        GVL_Devices.GEM1_PTM_20.q_RunDO, BOOL, 648100024 (8)
        GVL_Devices.GEM1_PTM_30, FB_PTM_Ebara_010M, 648100032 (83584)
        GVL_Devices.GEM1_PTM_30.i_iCurrentMon, INT, 648183536 (16)
        GVL_Devices.GEM1_PTM_30.i_iRawSpeed, INT, 648183504 (16)
        GVL_Devices.GEM1_PTM_30.i_iTempMon, INT, 648183520 (16)
        GVL_Devices.GEM1_PTM_30.i_xAccel, BOOL, 648183464 (8)
        GVL_Devices.GEM1_PTM_30.i_xAtSpd, BOOL, 648183488 (8)
        GVL_Devices.GEM1_PTM_30.i_xDecel, BOOL, 648183456 (8)
        GVL_Devices.GEM1_PTM_30.i_xNCFault, BOOL, 648183480 (8)
        GVL_Devices.GEM1_PTM_30.i_xRotate, BOOL, 648183472 (8)
        GVL_Devices.GEM1_PTM_30.q_iSpeedSet, INT, 648183600 (16)
        GVL_Devices.GEM1_PTM_30.q_xProtection, BOOL, 648183576 (8)
        GVL_Devices.GEM1_PTM_30.q_xReset, BOOL, 648183568 (8)
        GVL_Devices.GEM1_PTM_30.q_xSetSpeed, BOOL, 648183584 (8)
        GVL_Devices.GEM1_PTM_30.q_xStart, BOOL, 648183552 (8)
        GVL_Devices.GEM1_PTM_30.q_xStop, BOOL, 648183560 (8)
        GVL_Devices.GEM1_PTM_50, FB_PTM_Ebara_010M, 648183616 (83584)
        GVL_Devices.GEM1_PTM_50.i_iCurrentMon, INT, 648267120 (16)
        GVL_Devices.GEM1_PTM_50.i_iRawSpeed, INT, 648267088 (16)
        GVL_Devices.GEM1_PTM_50.i_iTempMon, INT, 648267104 (16)
        GVL_Devices.GEM1_PTM_50.i_xAccel, BOOL, 648267048 (8)
        GVL_Devices.GEM1_PTM_50.i_xAtSpd, BOOL, 648267072 (8)
        GVL_Devices.GEM1_PTM_50.i_xDecel, BOOL, 648267040 (8)
        GVL_Devices.GEM1_PTM_50.i_xNCFault, BOOL, 648267064 (8)
        GVL_Devices.GEM1_PTM_50.i_xRotate, BOOL, 648267056 (8)
        GVL_Devices.GEM1_PTM_50.q_iSpeedSet, INT, 648267184 (16)
        GVL_Devices.GEM1_PTM_50.q_xProtection, BOOL, 648267160 (8)
        GVL_Devices.GEM1_PTM_50.q_xReset, BOOL, 648267152 (8)
        GVL_Devices.GEM1_PTM_50.q_xSetSpeed, BOOL, 648267168 (8)
        GVL_Devices.GEM1_PTM_50.q_xStart, BOOL, 648267136 (8)
        GVL_Devices.GEM1_PTM_50.q_xStop, BOOL, 648267144 (8)
        GVL_Devices.GEM1_VCN_40, FB_VCN, 646267456 (82496)
        GVL_Devices.GEM1_VCN_40.q_iRawPosition, INT, 646349856 (16)
        GVL_Devices.GEM1_VGC_10, FB_VGC, 646349952 (176960)
        GVL_Devices.GEM1_VGC_10.i_xClsLS, BOOL, 646526792 (8)
        GVL_Devices.GEM1_VGC_10.i_xOpnLS, BOOL, 646526784 (8)
        GVL_Devices.GEM1_VGC_10.q_xOPN_DO, BOOL, 646526800 (8)
        GVL_Devices.GEM1_VGC_20, FB_VGC, 646526912 (176960)
        GVL_Devices.GEM1_VGC_20.i_xClsLS, BOOL, 646703752 (8)
        GVL_Devices.GEM1_VGC_20.i_xOpnLS, BOOL, 646703744 (8)
        GVL_Devices.GEM1_VGC_20.q_xOPN_DO, BOOL, 646703760 (8)
        GVL_Devices.GEM1_VGC_30, FB_VGC, 646703872 (176960)
        GVL_Devices.GEM1_VGC_30.i_xClsLS, BOOL, 646880712 (8)
        GVL_Devices.GEM1_VGC_30.i_xOpnLS, BOOL, 646880704 (8)
        GVL_Devices.GEM1_VGC_30.q_xOPN_DO, BOOL, 646880720 (8)
        GVL_Devices.GEM1_VGC_40, FB_VGC, 646880832 (176960)
        GVL_Devices.GEM1_VGC_40.i_xClsLS, BOOL, 647057672 (8)
        GVL_Devices.GEM1_VGC_40.i_xOpnLS, BOOL, 647057664 (8)
        GVL_Devices.GEM1_VGC_40.q_xOPN_DO, BOOL, 647057680 (8)
        GVL_Devices.GEM1_VGC_50, FB_VGC, 647057792 (176960)
        GVL_Devices.GEM1_VGC_50.i_xClsLS, BOOL, 647234632 (8)
        GVL_Devices.GEM1_VGC_50.i_xOpnLS, BOOL, 647234624 (8)
        GVL_Devices.GEM1_VGC_50.q_xOPN_DO, BOOL, 647234640 (8)
        GVL_Devices.GEM1_VGC_60, FB_VGC, 647234752 (176960)
        GVL_Devices.GEM1_VGC_60.i_xClsLS, BOOL, 647411592 (8)
        GVL_Devices.GEM1_VGC_60.i_xOpnLS, BOOL, 647411584 (8)
        GVL_Devices.GEM1_VGC_60.q_xOPN_DO, BOOL, 647411600 (8)
        GVL_Devices.GEM1_VGC_70, FB_VGC, 647411712 (176960)
        GVL_Devices.GEM1_VGC_70.i_xClsLS, BOOL, 647588552 (8)
        GVL_Devices.GEM1_VGC_70.i_xOpnLS, BOOL, 647588544 (8)
        GVL_Devices.GEM1_VGC_70.q_xOPN_DO, BOOL, 647588560 (8)
        GVL_Devices.GEM1_VRC_10, FB_VRC, 647588672 (84544)
        GVL_Devices.GEM1_VRC_10.i_xClsLS, BOOL, 647673192 (8)
        GVL_Devices.GEM1_VRC_10.i_xOpnLS, BOOL, 647673184 (8)
        GVL_Devices.GEM1_VRC_10.q_xOPN_DO, BOOL, 647673200 (8)
        GVL_Devices.GEM1_VRC_20, FB_VRC, 647673216 (84544)
        GVL_Devices.GEM1_VRC_20.i_xClsLS, BOOL, 647757736 (8)
        GVL_Devices.GEM1_VRC_20.i_xOpnLS, BOOL, 647757728 (8)
        GVL_Devices.GEM1_VRC_20.q_xOPN_DO, BOOL, 647757744 (8)
        GVL_Devices.GEM1_VRC_30, FB_VRC, 647757760 (84544)
        GVL_Devices.GEM1_VRC_30.i_xClsLS, BOOL, 647842280 (8)
        GVL_Devices.GEM1_VRC_30.i_xOpnLS, BOOL, 647842272 (8)
        GVL_Devices.GEM1_VRC_30.q_xOPN_DO, BOOL, 647842288 (8)
        GVL_Devices.GEM1_VRC_50, FB_VRC, 647842304 (84544)
        GVL_Devices.GEM1_VRC_50.i_xClsLS, BOOL, 647926824 (8)
        GVL_Devices.GEM1_VRC_50.i_xOpnLS, BOOL, 647926816 (8)
        GVL_Devices.GEM1_VRC_50.q_xOPN_DO, BOOL, 647926832 (8)
        GVL_Devices.GEM1_VRC_60, FB_Kashiyama_VRC, 647926848 (3072)
        GVL_Devices.GEM1_VRC_60.i_xClsLS, BOOL, 647929896 (8)
        GVL_Devices.GEM1_VRC_60.i_xOpnLS, BOOL, 647929888 (8)
        GVL_Devices.GEM1_VRC_60.q_xOPN_DO, BOOL, 647929904 (8)
        GVL_Devices.GEM1_VRC_70, FB_Kashiyama_VRC, 647929920 (3072)
        GVL_Devices.GEM1_VRC_70.i_xClsLS, BOOL, 647932968 (8)
        GVL_Devices.GEM1_VRC_70.i_xOpnLS, BOOL, 647932960 (8)
        GVL_Devices.GEM1_VRC_70.q_xOPN_DO, BOOL, 647932976 (8)
        GVL_Devices.GEM1_VVC_20, FB_TurbVentvalve_NO, 648267200 (1472)
        GVL_Devices.GEM1_VVC_20.q_xCLS_DO, BOOL, 648268640 (8)
        GVL_Devices.GEM1_VVC_30, FB_TurbVentvalve_NO, 648268672 (1472)
        GVL_Devices.GEM1_VVC_30.q_xCLS_DO, BOOL, 648270112 (8)
        GVL_Devices.GEM1_VVC_40, FB_VVC, 646266784 (640)
        GVL_Devices.GEM1_VVC_40.q_xOPN_DO, BOOL, 646267392 (8)
        GVL_Devices.GEM1_VVC_50, FB_TurbVentvalve_NO, 648270144 (1472)
        GVL_Devices.GEM1_VVC_50.q_xCLS_DO, BOOL, 648271584 (8)
        GVL_Devices.GEM2_GCC_30, FB_MKS422, 648788352 (87680)
        GVL_Devices.GEM2_GCC_30.i_iPRESS_R, INT, 648875712 (16)
        GVL_Devices.GEM2_GCC_30.q_xHV_DIS, BOOL, 648875728 (8)
        GVL_Devices.GEM2_GCC_50, FB_MKS422, 649048640 (87680)
        GVL_Devices.GEM2_GCC_50.i_iPRESS_R, INT, 649136000 (16)
        GVL_Devices.GEM2_GCC_50.q_xHV_DIS, BOOL, 649136016 (8)
        GVL_Devices.GEM2_GCC_60, FB_MKS422, 649308992 (87680)
        GVL_Devices.GEM2_GCC_60.i_iPRESS_R, INT, 649396352 (16)
        GVL_Devices.GEM2_GCC_60.q_xHV_DIS, BOOL, 649396368 (8)
        GVL_Devices.GEM2_GCC_70, FB_MKS422, 649569280 (87680)
        GVL_Devices.GEM2_GCC_70.i_iPRESS_R, INT, 649656640 (16)
        GVL_Devices.GEM2_GCC_70.q_xHV_DIS, BOOL, 649656656 (8)
        GVL_Devices.GEM2_GCM_40, ST_VG, 649745728 (1056)
        GVL_Devices.GEM2_GCM_41, FB_GCM, 649743232 (1248)
        GVL_Devices.GEM2_GCM_41.i_iPRESS_R, INT, 649744464 (16)
        GVL_Devices.GEM2_GCM_42, FB_GCM, 649744480 (1248)
        GVL_Devices.GEM2_GCM_42.i_iPRESS_R, INT, 649745712 (16)
        GVL_Devices.GEM2_GPI_10, FB_MKS317A, 648529408 (86272)
        GVL_Devices.GEM2_GPI_10.i_iPRESS_R, INT, 648615616 (16)
        GVL_Devices.GEM2_GPI_11, FB_MKS275, 648615680 (86336)
        GVL_Devices.GEM2_GPI_11.i_iPRESS_R, INT, 648701760 (16)
        GVL_Devices.GEM2_GPI_21, FB_MKS275, 648702016 (86336)
        GVL_Devices.GEM2_GPI_21.i_iPRESS_R, INT, 648788096 (16)
        GVL_Devices.GEM2_GPI_30, FB_MKS317A, 648876032 (86272)
        GVL_Devices.GEM2_GPI_30.i_iPRESS_R, INT, 648962240 (16)
        GVL_Devices.GEM2_GPI_31, FB_MKS275, 648962304 (86336)
        GVL_Devices.GEM2_GPI_31.i_iPRESS_R, INT, 649048384 (16)
        GVL_Devices.GEM2_GPI_50, FB_MKS317, 649136320 (86336)
        GVL_Devices.GEM2_GPI_50.i_iPRESS_R, INT, 649222368 (16)
        GVL_Devices.GEM2_GPI_51, FB_MKS275, 649222656 (86336)
        GVL_Devices.GEM2_GPI_51.i_iPRESS_R, INT, 649308736 (16)
        GVL_Devices.GEM2_GPI_60, FB_MKS317A, 649396672 (86272)
        GVL_Devices.GEM2_GPI_60.i_iPRESS_R, INT, 649482880 (16)
        GVL_Devices.GEM2_GPI_61, FB_MKS275, 649482944 (86336)
        GVL_Devices.GEM2_GPI_61.i_iPRESS_R, INT, 649569024 (16)
        GVL_Devices.GEM2_GPI_70, FB_MKS317A, 649656960 (86272)
        GVL_Devices.GEM2_GPI_70.i_iPRESS_R, INT, 649743168 (16)
        GVL_Devices.GEM2_PRO_10, FB_KashiyamaPump, 651751296 (832)
        GVL_Devices.GEM2_PRO_10.i_xAlarm, BOOL, 651752096 (8)
        GVL_Devices.GEM2_PRO_10.i_xIsRun, BOOL, 651752112 (8)
        GVL_Devices.GEM2_PRO_10.i_xRemote, BOOL, 651752088 (8)
        GVL_Devices.GEM2_PRO_10.i_xWarning, BOOL, 651752104 (8)
        GVL_Devices.GEM2_PRO_10.q_xLspdDo, BOOL, 651752080 (8)
        GVL_Devices.GEM2_PRO_10.q_xResetDo, BOOL, 651752072 (8)
        GVL_Devices.GEM2_PRO_10.q_xRunDO, BOOL, 651752064 (8)
        GVL_Devices.GEM2_PRO_20, FB_KashiyamaPump, 651752128 (832)
        GVL_Devices.GEM2_PRO_20.i_xAlarm, BOOL, 651752928 (8)
        GVL_Devices.GEM2_PRO_20.i_xIsRun, BOOL, 651752944 (8)
        GVL_Devices.GEM2_PRO_20.i_xRemote, BOOL, 651752920 (8)
        GVL_Devices.GEM2_PRO_20.i_xWarning, BOOL, 651752936 (8)
        GVL_Devices.GEM2_PRO_20.q_xLspdDo, BOOL, 651752912 (8)
        GVL_Devices.GEM2_PRO_20.q_xResetDo, BOOL, 651752904 (8)
        GVL_Devices.GEM2_PRO_20.q_xRunDO, BOOL, 651752896 (8)
        GVL_Devices.GEM2_PRO_30, FB_ScrollPump, 651749952 (448)
        GVL_Devices.GEM2_PRO_30.q_xRunDo, BOOL, 651750368 (8)
        GVL_Devices.GEM2_PRO_50, FB_ScrollPump, 651750400 (448)
        GVL_Devices.GEM2_PRO_50.q_xRunDo, BOOL, 651750816 (8)
        GVL_Devices.GEM2_PRO_60, FB_ScrollPump, 651750848 (448)
        GVL_Devices.GEM2_PRO_60.q_xRunDo, BOOL, 651751264 (8)
        GVL_Devices.GEM2_PTM_30, FB_PTM_Ebara_010M, 651417408 (83584)
        GVL_Devices.GEM2_PTM_30.i_iCurrentMon, INT, 651500912 (16)
        GVL_Devices.GEM2_PTM_30.i_iRawSpeed, INT, 651500880 (16)
        GVL_Devices.GEM2_PTM_30.i_iTempMon, INT, 651500896 (16)
        GVL_Devices.GEM2_PTM_30.i_xAccel, BOOL, 651500840 (8)
        GVL_Devices.GEM2_PTM_30.i_xAtSpd, BOOL, 651500864 (8)
        GVL_Devices.GEM2_PTM_30.i_xDecel, BOOL, 651500832 (8)
        GVL_Devices.GEM2_PTM_30.i_xNCFault, BOOL, 651500856 (8)
        GVL_Devices.GEM2_PTM_30.i_xRotate, BOOL, 651500848 (8)
        GVL_Devices.GEM2_PTM_30.q_iSpeedSet, INT, 651500976 (16)
        GVL_Devices.GEM2_PTM_30.q_xProtection, BOOL, 651500952 (8)
        GVL_Devices.GEM2_PTM_30.q_xReset, BOOL, 651500944 (8)
        GVL_Devices.GEM2_PTM_30.q_xSetSpeed, BOOL, 651500960 (8)
        GVL_Devices.GEM2_PTM_30.q_xStart, BOOL, 651500928 (8)
        GVL_Devices.GEM2_PTM_30.q_xStop, BOOL, 651500936 (8)
        GVL_Devices.GEM2_PTM_50, FB_PTM_Ebara_010M, 651500992 (83584)
        GVL_Devices.GEM2_PTM_50.i_iCurrentMon, INT, 651584496 (16)
        GVL_Devices.GEM2_PTM_50.i_iRawSpeed, INT, 651584464 (16)
        GVL_Devices.GEM2_PTM_50.i_iTempMon, INT, 651584480 (16)
        GVL_Devices.GEM2_PTM_50.i_xAccel, BOOL, 651584424 (8)
        GVL_Devices.GEM2_PTM_50.i_xAtSpd, BOOL, 651584448 (8)
        GVL_Devices.GEM2_PTM_50.i_xDecel, BOOL, 651584416 (8)
        GVL_Devices.GEM2_PTM_50.i_xNCFault, BOOL, 651584440 (8)
        GVL_Devices.GEM2_PTM_50.i_xRotate, BOOL, 651584432 (8)
        GVL_Devices.GEM2_PTM_50.q_iSpeedSet, INT, 651584560 (16)
        GVL_Devices.GEM2_PTM_50.q_xProtection, BOOL, 651584536 (8)
        GVL_Devices.GEM2_PTM_50.q_xReset, BOOL, 651584528 (8)
        GVL_Devices.GEM2_PTM_50.q_xSetSpeed, BOOL, 651584544 (8)
        GVL_Devices.GEM2_PTM_50.q_xStart, BOOL, 651584512 (8)
        GVL_Devices.GEM2_PTM_50.q_xStop, BOOL, 651584520 (8)
        GVL_Devices.GEM2_PTM_60, FB_PTM_TwisTorr, 651584576 (82688)
        GVL_Devices.GEM2_PTM_60.i_xAtSpd, BOOL, 651667240 (8)
        GVL_Devices.GEM2_PTM_60.i_xFault, BOOL, 651667248 (8)
        GVL_Devices.GEM2_PTM_60.q_RunDO, BOOL, 651667256 (8)
        GVL_Devices.GEM2_PTM_70, FB_PTM_TwisTorr, 651667264 (82688)
        GVL_Devices.GEM2_PTM_70.i_xAtSpd, BOOL, 651749928 (8)
        GVL_Devices.GEM2_PTM_70.i_xFault, BOOL, 651749936 (8)
        GVL_Devices.GEM2_PTM_70.q_RunDO, BOOL, 651749944 (8)
        GVL_Devices.GEM2_VCN_40, FB_VCN, 651334912 (82496)
        GVL_Devices.GEM2_VCN_40.q_iRawPosition, INT, 651417312 (16)
        GVL_Devices.GEM2_VGC_10, FB_VGC, 649746816 (176960)
        GVL_Devices.GEM2_VGC_10.i_xClsLS, BOOL, 649923656 (8)
        GVL_Devices.GEM2_VGC_10.i_xOpnLS, BOOL, 649923648 (8)
        GVL_Devices.GEM2_VGC_10.q_xOPN_DO, BOOL, 649923664 (8)
        GVL_Devices.GEM2_VGC_20, FB_VGC, 649923776 (176960)
        GVL_Devices.GEM2_VGC_20.i_xClsLS, BOOL, 650100616 (8)
        GVL_Devices.GEM2_VGC_20.i_xOpnLS, BOOL, 650100608 (8)
        GVL_Devices.GEM2_VGC_20.q_xOPN_DO, BOOL, 650100624 (8)
        GVL_Devices.GEM2_VGC_30, FB_VGC, 650100736 (176960)
        GVL_Devices.GEM2_VGC_30.i_xClsLS, BOOL, 650277576 (8)
        GVL_Devices.GEM2_VGC_30.i_xOpnLS, BOOL, 650277568 (8)
        GVL_Devices.GEM2_VGC_30.q_xOPN_DO, BOOL, 650277584 (8)
        GVL_Devices.GEM2_VGC_40, FB_VGC, 650277696 (176960)
        GVL_Devices.GEM2_VGC_40.i_xClsLS, BOOL, 650454536 (8)
        GVL_Devices.GEM2_VGC_40.i_xOpnLS, BOOL, 650454528 (8)
        GVL_Devices.GEM2_VGC_40.q_xOPN_DO, BOOL, 650454544 (8)
        GVL_Devices.GEM2_VGC_50, FB_VGC, 650454656 (176960)
        GVL_Devices.GEM2_VGC_50.i_xClsLS, BOOL, 650631496 (8)
        GVL_Devices.GEM2_VGC_50.i_xOpnLS, BOOL, 650631488 (8)
        GVL_Devices.GEM2_VGC_50.q_xOPN_DO, BOOL, 650631504 (8)
        GVL_Devices.GEM2_VGC_60, FB_VGC, 650631616 (176960)
        GVL_Devices.GEM2_VGC_60.i_xClsLS, BOOL, 650808456 (8)
        GVL_Devices.GEM2_VGC_60.i_xOpnLS, BOOL, 650808448 (8)
        GVL_Devices.GEM2_VGC_60.q_xOPN_DO, BOOL, 650808464 (8)
        GVL_Devices.GEM2_VGC_70, FB_VGC, 650808576 (176960)
        GVL_Devices.GEM2_VGC_70.i_xClsLS, BOOL, 650985416 (8)
        GVL_Devices.GEM2_VGC_70.i_xOpnLS, BOOL, 650985408 (8)
        GVL_Devices.GEM2_VGC_70.q_xOPN_DO, BOOL, 650985424 (8)
        GVL_Devices.GEM2_VRC_10, FB_Kashiyama_VRC, 651323712 (3072)
        GVL_Devices.GEM2_VRC_10.i_xClsLS, BOOL, 651326760 (8)
        GVL_Devices.GEM2_VRC_10.i_xOpnLS, BOOL, 651326752 (8)
        GVL_Devices.GEM2_VRC_10.q_xOPN_DO, BOOL, 651326768 (8)
        GVL_Devices.GEM2_VRC_20, FB_Kashiyama_VRC, 651326784 (3072)
        GVL_Devices.GEM2_VRC_20.i_xClsLS, BOOL, 651329832 (8)
        GVL_Devices.GEM2_VRC_20.i_xOpnLS, BOOL, 651329824 (8)
        GVL_Devices.GEM2_VRC_20.q_xOPN_DO, BOOL, 651329840 (8)
        GVL_Devices.GEM2_VRC_30, FB_VRC, 650985536 (84544)
        GVL_Devices.GEM2_VRC_30.i_xClsLS, BOOL, 651070056 (8)
        GVL_Devices.GEM2_VRC_30.i_xOpnLS, BOOL, 651070048 (8)
        GVL_Devices.GEM2_VRC_30.q_xOPN_DO, BOOL, 651070064 (8)
        GVL_Devices.GEM2_VRC_50, FB_VRC, 651070080 (84544)
        GVL_Devices.GEM2_VRC_50.i_xClsLS, BOOL, 651154600 (8)
        GVL_Devices.GEM2_VRC_50.i_xOpnLS, BOOL, 651154592 (8)
        GVL_Devices.GEM2_VRC_50.q_xOPN_DO, BOOL, 651154608 (8)
        GVL_Devices.GEM2_VRC_60, FB_VRC, 651154624 (84544)
        GVL_Devices.GEM2_VRC_60.i_xClsLS, BOOL, 651239144 (8)
        GVL_Devices.GEM2_VRC_60.i_xOpnLS, BOOL, 651239136 (8)
        GVL_Devices.GEM2_VRC_60.q_xOPN_DO, BOOL, 651239152 (8)
        GVL_Devices.GEM2_VRC_70, FB_VRC, 651239168 (84544)
        GVL_Devices.GEM2_VRC_70.i_xClsLS, BOOL, 651323688 (8)
        GVL_Devices.GEM2_VRC_70.i_xOpnLS, BOOL, 651323680 (8)
        GVL_Devices.GEM2_VRC_70.q_xOPN_DO, BOOL, 651323696 (8)
        GVL_Devices.GEM2_VVC_30, FB_TurbVentvalve_NO, 651329856 (1472)
        GVL_Devices.GEM2_VVC_30.q_xCLS_DO, BOOL, 651331296 (8)
        GVL_Devices.GEM2_VVC_40, FB_VVC, 651334272 (640)
        GVL_Devices.GEM2_VVC_40.q_xOPN_DO, BOOL, 651334880 (8)
        GVL_Devices.GEM2_VVC_50, FB_TurbVentvalve_NO, 651331328 (1472)
        GVL_Devices.GEM2_VVC_50.q_xCLS_DO, BOOL, 651332768 (8)
        GVL_Devices.GEM2_VVC_70, FB_TurbVentvalve_NO, 651332800 (1472)
        GVL_Devices.GEM2_VVC_70.q_xCLS_DO, BOOL, 651334240 (8)
        GVL_Devices.iWatchdog, UDINT, 644774368 (32)
        GVL_Devices.SATT_MPA_01, FB_MPA, 651752960 (170432)
        GVL_Devices.SATT_MPA_01.i_xInsertedLS, BOOL, 651841472 (8)
        GVL_Devices.SATT_MPA_01.i_xRetractedLS, BOOL, 651841480 (8)
        GVL_Devices.SATT_MPA_01.q_xInsert_DO, BOOL, 651841488 (8)
        GVL_Devices.SATT_MPA_01.q_xRetract_DO, BOOL, 651841496 (8)
        GVL_Devices.SATT_MPA_02, FB_MPA, 651923392 (170432)
        GVL_Devices.SATT_MPA_02.i_xInsertedLS, BOOL, 652011904 (8)
        GVL_Devices.SATT_MPA_02.i_xRetractedLS, BOOL, 652011912 (8)
        GVL_Devices.SATT_MPA_02.q_xInsert_DO, BOOL, 652011920 (8)
        GVL_Devices.SATT_MPA_02.q_xRetract_DO, BOOL, 652011928 (8)
        GVL_Devices.SATT_MPA_03, FB_MPA, 652093824 (170432)
        GVL_Devices.SATT_MPA_03.i_xInsertedLS, BOOL, 652182336 (8)
        GVL_Devices.SATT_MPA_03.i_xRetractedLS, BOOL, 652182344 (8)
        GVL_Devices.SATT_MPA_03.q_xInsert_DO, BOOL, 652182352 (8)
        GVL_Devices.SATT_MPA_03.q_xRetract_DO, BOOL, 652182360 (8)
        GVL_Devices.SATT_MPA_04, FB_MPA, 652264256 (170432)
        GVL_Devices.SATT_MPA_04.i_xInsertedLS, BOOL, 652352768 (8)
        GVL_Devices.SATT_MPA_04.i_xRetractedLS, BOOL, 652352776 (8)
        GVL_Devices.SATT_MPA_04.q_xInsert_DO, BOOL, 652352784 (8)
        GVL_Devices.SATT_MPA_04.q_xRetract_DO, BOOL, 652352792 (8)
        GVL_Devices.SATT_MPA_05, FB_MPA, 652434688 (170432)
        GVL_Devices.SATT_MPA_05.i_xInsertedLS, BOOL, 652523200 (8)
        GVL_Devices.SATT_MPA_05.i_xRetractedLS, BOOL, 652523208 (8)
        GVL_Devices.SATT_MPA_05.q_xInsert_DO, BOOL, 652523216 (8)
        GVL_Devices.SATT_MPA_05.q_xRetract_DO, BOOL, 652523224 (8)
        GVL_Devices.SATT_MPA_06, FB_MPA, 652605120 (170432)
        GVL_Devices.SATT_MPA_06.i_xInsertedLS, BOOL, 652693632 (8)
        GVL_Devices.SATT_MPA_06.i_xRetractedLS, BOOL, 652693640 (8)
        GVL_Devices.SATT_MPA_06.q_xInsert_DO, BOOL, 652693648 (8)
        GVL_Devices.SATT_MPA_06.q_xRetract_DO, BOOL, 652693656 (8)
        GVL_Devices.SATT_MPA_07, FB_MPA, 652775552 (170432)
        GVL_Devices.SATT_MPA_07.i_xInsertedLS, BOOL, 652864064 (8)
        GVL_Devices.SATT_MPA_07.i_xRetractedLS, BOOL, 652864072 (8)
        GVL_Devices.SATT_MPA_07.q_xInsert_DO, BOOL, 652864080 (8)
        GVL_Devices.SATT_MPA_07.q_xRetract_DO, BOOL, 652864088 (8)
        GVL_Devices.SATT_MPA_08, FB_MPA, 652945984 (170432)
        GVL_Devices.SATT_MPA_08.i_xInsertedLS, BOOL, 653034496 (8)
        GVL_Devices.SATT_MPA_08.i_xRetractedLS, BOOL, 653034504 (8)
        GVL_Devices.SATT_MPA_08.q_xInsert_DO, BOOL, 653034512 (8)
        GVL_Devices.SATT_MPA_08.q_xRetract_DO, BOOL, 653034520 (8)
        GVL_Devices.SATT_MPA_09, FB_MPA, 653116416 (170432)
        GVL_Devices.SATT_MPA_09.i_xInsertedLS, BOOL, 653204928 (8)
        GVL_Devices.SATT_MPA_09.i_xRetractedLS, BOOL, 653204936 (8)
        GVL_Devices.SATT_MPA_09.q_xInsert_DO, BOOL, 653204944 (8)
        GVL_Devices.SATT_MPA_09.q_xRetract_DO, BOOL, 653204952 (8)
        GVL_Devices.USG_GCC, FB_TGCC_ADS, 644865088 (90688)
        GVL_Devices.USG_PIN, FB_TPIP_ADS, 644774400 (90688)

.. raw:: html

   </details>
   <br />


GVL_ILK
^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_ILK.g_FastFaultOutput1, FB_HardwareFFOutput, 653286848 (494912)
        GVL_ILK.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 653287112 (8)
        GVL_ILK.g_FastFaultOutput2, FB_HardwareFFOutput, 653781760 (494912)
        GVL_ILK.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 653782024 (8)
        GVL_ILK.g_fbArbiter, FB_Arbiter, 654276672 (473472)
        GVL_ILK.g_fbArbiter2, FB_Arbiter, 654750144 (473472)
        GVL_ILK.g_fbArbiter3, FB_Arbiter, 655223616 (473472)
        GVL_ILK.GEM1_Aperture_Closed, BOOL, 649746808 (8)
        GVL_ILK.GEM1_Turbo_Running, BOOL, 648361712 (8)
        GVL_ILK.GEM1_Turbo_Valves_Closed, BOOL, 646267440 (8)
        GVL_ILK.GEM1_Turbo_Valves_Open, BOOL, 646267448 (8)
        GVL_ILK.GEM1_TwinscrewPumps_Valves_Open, BOOL, 649746792 (8)
        GVL_ILK.GEM2_Aperture_Closed, BOOL, 655697088 (8)
        GVL_ILK.GEM2_Turbo_Running, BOOL, 648361720 (8)
        GVL_ILK.GEM2_Turbo_Valves_Closed, BOOL, 648361696 (8)
        GVL_ILK.GEM2_Turbo_Valves_Open, BOOL, 648361704 (8)
        GVL_ILK.GEM2_TwinscrewPumps_Valves_Open, BOOL, 649746800 (8)
        GVL_ILK.TwinscrewPumps_Valves_Closed, BOOL, 649746784 (8)
        GVL_ILK.xGATTOverrideMode, BOOL, 646267424 (8)
        GVL_ILK.xGEM1_AperturesOpnOK, BOOL, 655697096 (8)
        GVL_ILK.xGEM1OverrideMode, BOOL, 644773624 (8)
        GVL_ILK.xGEM2_AperturesOpnOK, BOOL, 655697104 (8)
        GVL_ILK.xGEM2OverrideMode, BOOL, 646267432 (8)

.. raw:: html

   </details>
   <br />


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4389632 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097280 (81600)
        GVL_Logger.iLogPort, UINT, 4096112 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4097248 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096448 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096416 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178880 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096480 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096512 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096544 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097216 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>12 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 8554944 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 8537992 (8)
        GVL_Param_TcUnit.MaxNumberOfAsserts, UINT, 4390064 (16)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 8552848 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390048 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 8552832 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4389072 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 8552496 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 8554976 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 8552864 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 8540360 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 8552896 (2048)

.. raw:: html

   </details>
   <br />


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 8538000 (16)


GVL_Sensors
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>16 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Sensors.GEM1_AIR_1, FB_PressureSensor_PX219, 655697120 (576)
        GVL_Sensors.GEM1_AIR_1.i_iPRESS_R, INT, 655697664 (16)
        GVL_Sensors.GEM1_AIR_2, FB_PressureSensor_PX219, 655697696 (576)
        GVL_Sensors.GEM1_AIR_2.i_iPRESS_R, INT, 655698240 (16)
        GVL_Sensors.GEM1_GFM_41, FB_PressureSensor_PX219, 655699424 (576)
        GVL_Sensors.GEM1_GFM_41.i_iPRESS_R, INT, 655699968 (16)
        GVL_Sensors.GEM1_GFM_42, FB_PressureSensor_PX219, 655700000 (576)
        GVL_Sensors.GEM1_GFM_42.i_iPRESS_R, INT, 655700544 (16)
        GVL_Sensors.GEM2_GFM_41, FB_PressureSensor_PX219, 655700576 (576)
        GVL_Sensors.GEM2_GFM_41.i_iPRESS_R, INT, 655701120 (16)
        GVL_Sensors.GEM2_GFM_42, FB_PressureSensor_PX219, 655701152 (576)
        GVL_Sensors.GEM2_GFM_42.i_iPRESS_R, INT, 655701696 (16)
        GVL_Sensors.GEM2_N2_1, FB_PressureSensor_PX219, 655698272 (576)
        GVL_Sensors.GEM2_N2_1.i_iPRESS_R, INT, 655698816 (16)
        GVL_Sensors.GEM2_N2_2, FB_PressureSensor_PX219, 655698848 (576)
        GVL_Sensors.GEM2_N2_2.i_iPRESS_R, INT, 655699392 (16)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsLogger, FB_ADSLogStringMessageFifoQueue, 4408704 (4128864)
        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 630432320 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 630416320 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4392672 (8)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 8554968 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 4390624 (2048)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 630382240 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 4390592 (32)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 630382208 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4392680 (8)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 630384288 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4392688 (16)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 630384304 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4390080 (512)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 8555008 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 4392704 (16000)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 630384320 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4383992 (8)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 8554960 (8)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 8537944 (48)
        LCLS_Vacuum.LCLS_Vacuum_Serial.L2SI_Vacuum_Library.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 8540312 (48)


MAIN
^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MAIN.fbLogHandler, FB_LogHandler, 638814528 (5788800)
        MAIN.iWatchdog, UDINT, 638814464 (32)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4389312 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 8540368 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 8545744 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 8547584 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 8545824 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 8549376 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 8545504 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 8545600 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 8544448 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 8551456 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 8550432 (1024)
        PMPS_GVL.g_cBoundaries, INT, 8549360 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 8549344 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 8545664 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 8545728 (16)
        PMPS_GVL.PERange, PE_Ranges, 8545472 (32)
        PMPS_GVL.reVHyst, REAL, 8550400 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 8545760 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 8542688 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 8540928 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 8545696 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 8545536 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 8552512 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 8552480 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 8552544 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 8552576 (256)


PRG_GATT
^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GATT.arrTable, FLOAT, 644611584 (1152)
        PRG_GATT.bARWactive, BOOL, 644608600 (8)
        PRG_GATT.bError, BOOL, 644608592 (8)
        PRG_GATT.bInit, BOOL, 644608608 (8)
        PRG_GATT.eErrorId, E_CTRL_ERRORCODES, 644608576 (16)
        PRG_GATT.eMode, E_CTRL_MODE, 644606128 (16)
        PRG_GATT.fb_PID, FB_BasicPID, 644606208 (1856)
        PRG_GATT.fbCTRL_PID, FB_CTRL_PID, 644608640 (2816)
        PRG_GATT.fKp, REAL, 644608064 (32)
        PRG_GATT.fSetpointValue, REAL, 644606176 (32)
        PRG_GATT.fTn, REAL, 644608096 (32)
        PRG_GATT.nDataTable_NumberOfRows, INT, 644606112 (16)
        PRG_GATT.stCTRL_LIN_INTERPOLATION_PARAMS, ST_CTRL_LIN_INTERPOLATION_PARAMS, 644611456 (128)
        PRG_GATT.stCTRL_PID_PARAMS, ST_CTRL_PID_PARAMS, 644608128 (448)
        PRG_GATT.VCN_Req_Pos, REAL, 644606144 (32)

.. raw:: html

   </details>
   <br />


PRG_GEM1
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GEM1.arrTable_GEM1, FLOAT, 644613504 (3840)
        PRG_GEM1.bARWactive, BOOL, 644617456 (8)
        PRG_GEM1.bError, BOOL, 644608624 (8)
        PRG_GEM1.bExtrapolate, BOOL, 644608632 (8)
        PRG_GEM1.bHold, BOOL, 644617432 (8)
        PRG_GEM1.bInit, BOOL, 644617464 (8)
        PRG_GEM1.bReset, BOOL, 644608616 (8)
        PRG_GEM1.bSync, BOOL, 644617424 (8)
        PRG_GEM1.eErrorId, E_CTRL_ERRORCODES, 644617440 (16)
        PRG_GEM1.eMode, E_CTRL_MODE, 644617408 (16)
        PRG_GEM1.fbCTRL_DEADBAND, FB_CTRL_DEADBAND, 644622592 (832)
        PRG_GEM1.fbCTRL_LIN_INTERPOLATION, FB_CTRL_LIN_INTERPOLATION, 644620736 (1728)
        PRG_GEM1.fbCTRL_PID, FB_CTRL_PID, 644617920 (2816)
        PRG_GEM1.fKp1, REAL, 644613376 (32)
        PRG_GEM1.fKp2, REAL, 644613440 (32)
        PRG_GEM1.fManValue, FLOAT, 644617344 (64)
        PRG_GEM1.fTn1, REAL, 644613408 (32)
        PRG_GEM1.fTn2, REAL, 644613472 (32)
        PRG_GEM1.FTrig, F_TRIG, 644623808 (64)
        PRG_GEM1.pid_on, TON, 644623552 (224)
        PRG_GEM1.stCTRL_DEADBAND_PARAMS, ST_CTRL_DEADBAND_PARAMS, 644623424 (128)
        PRG_GEM1.stCTRL_LIN_INTERPOLATION_PARAMS_GEM, ST_CTRL_LIN_INTERPOLATION_PARAMS, 644622464 (128)
        PRG_GEM1.stCTRL_PID_PARAMS, ST_CTRL_PID_PARAMS, 644617472 (448)
        PRG_GEM1.wait, TIME, 644623776 (32)

.. raw:: html

   </details>
   <br />


PRG_GEM1_DIFF_PUMP
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GEM1_DIFF_PUMP.bInit, BOOL, 638761200 (8)
        PRG_GEM1_DIFF_PUMP.rMaxBackingPressure, REAL, 638814496 (32)


PRG_GEM2
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GEM2.arrTable_GEM2, FLOAT, 644624064 (3968)
        PRG_GEM2.bARWactive, BOOL, 644624056 (8)
        PRG_GEM2.bError, BOOL, 644623880 (8)
        PRG_GEM2.bExtrapolate, BOOL, 644623888 (8)
        PRG_GEM2.bHold, BOOL, 644624048 (8)
        PRG_GEM2.bInit, BOOL, 644628560 (8)
        PRG_GEM2.bReset, BOOL, 644623872 (8)
        PRG_GEM2.bSync, BOOL, 644623896 (8)
        PRG_GEM2.eErrorId, E_CTRL_ERRORCODES, 644628544 (16)
        PRG_GEM2.eMode, E_CTRL_MODE, 644624032 (16)
        PRG_GEM2.fbCTRL_DEADBAND, FB_CTRL_DEADBAND, 644633280 (832)
        PRG_GEM2.fbCTRL_LIN_INTERPOLATION, FB_CTRL_LIN_INTERPOLATION, 644631424 (1728)
        PRG_GEM2.fbCTRL_PID, FB_CTRL_PID, 644628608 (2816)
        PRG_GEM2.fKp1, REAL, 644623904 (32)
        PRG_GEM2.fKp2, REAL, 644623968 (32)
        PRG_GEM2.fManValue, FLOAT, 644628032 (64)
        PRG_GEM2.fTn1, REAL, 644623936 (32)
        PRG_GEM2.fTn2, REAL, 644624000 (32)
        PRG_GEM2.FTrig, F_TRIG, 644634464 (64)
        PRG_GEM2.pid_on, TON, 644634240 (224)
        PRG_GEM2.stCTRL_DEADBAND_PARAMS, ST_CTRL_DEADBAND_PARAMS, 644634112 (128)
        PRG_GEM2.stCTRL_LIN_INTERPOLATION_PARAMS_GEM, ST_CTRL_LIN_INTERPOLATION_PARAMS, 644633152 (128)
        PRG_GEM2.stCTRL_PID_PARAMS, ST_CTRL_PID_PARAMS, 644628096 (448)
        PRG_GEM2.wait, TIME, 644628576 (32)

.. raw:: html

   </details>
   <br />


PRG_GEM2_DIFF_PUMP
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_GEM2_DIFF_PUMP.bInit, BOOL, 638761208 (8)
        PRG_GEM2_DIFF_PUMP.rMaxBackingPressure, REAL, 644605536 (32)


PRG_PMPS
^^^^^^^^

.. raw:: html

   <details>
       <summary>12 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PMPS.ar1, BOOL, 644773512 (8)
        PRG_PMPS.ar2, BOOL, 644773520 (8)
        PRG_PMPS.ar3, BOOL, 644773528 (8)
        PRG_PMPS.bRemove, BOOL, 644773600 (8)
        PRG_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 644635136 (138368)
        PRG_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 644635936 (1760)
        PRG_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 644637696 (1760)
        PRG_PMPS.fbArbiterIO.xTxPDO_state, BIT, 644639457 (1)
        PRG_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 644639456 (1)
        PRG_PMPS.nReqID, UDINT, 644773536 (32)
        PRG_PMPS.nReqRM, UDINT, 644773568 (32)
        PRG_PMPS.test, BOOL, 644773504 (8)

.. raw:: html

   </details>
   <br />


PRG_SATT
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SATT.PMPS_OK, BOOL, 644628568 (8)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 655721184 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 655720672 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 655720800 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 655720928 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 655720544 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 655721056 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 655751264 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 655701984 (2048)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 655707168 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 655704032 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 655706112 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 655707136 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 655706080 (32)


